--- a/qcom-sdk36/Belarusian/main/Mms.apk/res/values-be/strings.xml
+++ b/qcom-sdk36/Belarusian/main/Mms.apk/res/values-be/strings.xml
@@ -68,21 +68,21 @@
     <string name="adding_recipients">Дадаванне атрымальнікаў…</string>
     <string name="afternoon">Поўдзень</string>
     <string name="agree_and_open">Згадзіцца</string>
-    <string name="ai_smart_message_content">&lt;Data>Пры паданні сваіх функцый AI-зводка паведамленняў грунтуецца на Разумных паведамленнях. Каб працягнуць, прачытайце і прыміце наша &lt;a href=\"%1$s\">Карыстальніцкае пагадненне&lt;/a> і &lt;a href=\"%1$s\">Палітыку прыватнасці&lt;/a>.&lt;/Data></string>
+    <string name="ai_smart_message_content"><Data>Пры паданні сваіх функцый AI-зводка паведамленняў грунтуецца на Разумных паведамленнях. Каб працягнуць, прачытайце і прыміце наша &lt;a href=\"%1$s\">Карыстальніцкае пагадненне&lt;/a> і &lt;a href=\"%1$s\">Палітыку прыватнасці&lt;/a>.</Data></string>
     <string name="ai_smart_message_titile">Уключыць Разумныя паведамлення</string>
     <string name="ai_sum_internal_test_agree">Пагадзіцца</string>
     <string name="ai_sum_internal_test_content">AI-зводка паведамленняў выкарыстоўвае магчымасці вялікай мадэлі для абагульнення паведамленняў і адлюстравання ключавой інфармацыі. Уключэнне гэтай функцыі крыху павялічыць энергаспажыванне.</string>
     <string name="ai_sum_internal_test_disagree">Не згаджацца</string>
     <string name="ai_sum_internal_test_title">Выканаць бэта-тэставанне AI-зводкі паведамленняў</string>
     <string name="ai_summary_description">Дазвольце AI ствараць зводкі доўгіх паведамленняў, каб паказаць вам ключавую інфармацыю. Гэтая функцыя крыху павялічвае энергаспажыванне.</string>
-    <string name="ai_summary_dialog_content">&lt;Data>AI-зводка паведамленняў дае разумныя рэзюмэ ключавой інфармацыі з доўгіх паведамленняў. Xiaomi неабходна атрымаць доступ да змесціва паведамлення, каб даць гэтую функцыю, але Xiaomi не будзе захоўваць атрыманую інфармацыю.&lt;br />&lt;br />Перад выкарыстаннем гэтай службы прачытайце &lt;a href=\"%1$s\">Карыстальніцкае пагадненне AI-зводкі паведамленняў&lt;/a> і &lt;a href=\"%2$s\">Палітыку прыватнасці AI-зводкі паведамленняў &lt;/a> і пагадзіцеся з імі.&lt;/Data></string>
+    <string name="ai_summary_dialog_content"><Data>AI-зводка паведамленняў дае разумныя рэзюмэ ключавой інфармацыі з доўгіх паведамленняў. Xiaomi неабходна атрымаць доступ да змесціва паведамлення, каб даць гэтую функцыю, але Xiaomi не будзе захоўваць атрыманую інфармацыю.&lt;br />&lt;br />Перад выкарыстаннем гэтай службы прачытайце &lt;a href=\"%1$s\">Карыстальніцкае пагадненне AI-зводкі паведамленняў&lt;/a> і &lt;a href=\"%2$s\">Палітыку прыватнасці AI-зводкі паведамленняў &lt;/a> і пагадзіцеся з імі.</Data></string>
     <string name="ai_summary_dialog_title">Патрабуюцца дазволы</string>
     <string name="ai_summary_model_info">Назва мадэлі: тэст на прыладзе Xiaomi</string>
     <string name="ai_summary_privacy_content">Калі вы выкарыстоўваеце AI-зводку паведамленняў, змест зводкі (уключаючы любыя асабістыя дадзеныя, якія змяшчаюцца ў ім) будзе апрацоўвацца Xiaomi, але Xiaomi не будзе захоўваць гэтыя дадзеныя.</string>
-    <string name="ai_summary_privacy_tip">&lt;Data>Прачытайце &lt;a href=\"%1$s\">Палітыку прыватнасці AI-зводкі паведамленняў&lt;/a>, каб зразумець, як мы кіруем вашымі дадзенымі. Падрабязней аб гэтай паслузе чытайце ў &lt;a href=\"%2$s\">Карыстальніцкім пагадненні AI-зводкі паведамленняў&lt;/a>.&lt;/Data></string>
+    <string name="ai_summary_privacy_tip"><Data>Прачытайце &lt;a href=\"%1$s\">Палітыку прыватнасці AI-зводкі паведамленняў&lt;/a>, каб зразумець, як мы кіруем вашымі дадзенымі. Падрабязней аб гэтай паслузе чытайце ў &lt;a href=\"%2$s\">Карыстальніцкім пагадненні AI-зводкі паведамленняў&lt;/a>.</Data></string>
     <string name="ai_summary_privacy_title">Заява аб прыватнасці</string>
     <string name="ai_summary_public_info">Рэгістрацыйная інфармацыя</string>
-    <string name="ai_summary_record">&lt;Data>Рэгістрацыйны нумар: &lt;a href=\"%1$s\">Beijing-XiaoMiDuanCeWenBen-202412100047&lt;/a>&lt;/Data></string>
+    <string name="ai_summary_record"><Data>Рэгістрацыйны нумар: &lt;a href=\"%1$s\">Beijing-XiaoMiDuanCeWenBen-202412100047&lt;/a></Data></string>
     <string name="aim_show_card">Паказаць картку</string>
     <string name="aim_show_original">Паказаць паведамленне</string>
     <string name="alert_ai_sum_close_content">Калі вы выключыце Разумныя паведамленні, вы не зможаце выкарыстоўваць AI-зводку паведамленняў.</string>
@@ -173,6 +173,8 @@
     <string name="button_pre_slide">Назад</string>
     <string name="button_resend_message">Адправіць зноў</string>
     <string name="button_unfold">Разгарнуць</string>
+    <string name="calendar_date_picker_a11y_next_month">Перайсці да наступнага месяца</string>
+    <string name="calendar_date_picker_a11y_prev_month">Перайсці да папярэдняга месяца</string>
     <string name="can_not_send_by_rcs">Немагчыма выкарыстоўваць 5G Паведамленні</string>
     <string name="can_not_view_group_chat_stranger">Нельга прагледзець звесткі пра незнаёмых.</string>
     <string name="cancel">Адмена</string>
@@ -1253,7 +1255,7 @@
     <string name="rsc_chatbot_back">Назад</string>
     <string name="rsc_chatbot_detail">Інфармацыя пра пастаўшчыка</string>
     <string name="satellite_location_failed">Не ўдалося адправіць месцазнаходжанне. SMS адпраўлена без месцазнаходжання.</string>
-    <string name="satellite_location_privacy">&lt;Data>Для адпраўкі паведамленняў Tiantong Satellite патрабуецца доступ да вашага месцазнаходжання. Перш чым працягнуць, азнаёмцеся і пагадзіцеся з нашай &lt;font color=\"%1$s\">&lt;a href=\"%2$s\">Палітыкай прыватнасці&lt;/a>&lt;/font>.&lt;/Data></string>
+    <string name="satellite_location_privacy"><Data>Для адпраўкі паведамленняў Tiantong Satellite патрабуецца доступ да вашага месцазнаходжання. Перш чым працягнуць, азнаёмцеся і пагадзіцеся з нашай &lt;font color=\"%1$s\">&lt;a href=\"%2$s\">Палітыкай прыватнасці&lt;/a>&lt;/font>.</Data></string>
     <string name="satellite_location_privacy_title">Доступ да месцазнаходжання</string>
     <string name="satellite_message_notification_contact_end">(Праз спадарожнік)</string>
     <string name="satellite_sms">Спадарожнікавае паведамленне</string>
