--- a/qcom-sdk36/Croatian/main/MiMover.apk/res/values-hr/strings.xml
+++ b/qcom-sdk36/Croatian/main/MiMover.apk/res/values-hr/strings.xml
@@ -115,6 +115,8 @@
     <string name="clearable_edittext_clear_description">Očisti</string>
     <string name="close">Zatvori</string>
     <string name="close_cellular_summary">Vaš uređaj trenutno koristi mobilne podatke zbog ograničenja sistema. Ugasite mobilne podatke i povežite se ponovno na novi uređaj.</string>
+    <string name="close_cellular_summary_pad">Vaš uređaj trenutno koristi mobilne podatke zbog sistemskih ograničenja. Isključite mobilne podatke i ponovno se povežite s novim uređajem.</string>
+    <string name="close_cellular_summary_phone">Vaš uređaj trenutno koristi mobilne podatke zbog sistemskih ograničenja. Isključite mobilne podatke i ponovno se povežite s novim uređajem.</string>
     <string name="close_cellular_title">Ne mogu se povezati</string>
     <string name="close_twice_auth_btn">Isključi autorizaciju s dva faktora</string>
     <string name="close_twice_auth_note">"Bilješka:
@@ -301,6 +303,8 @@ Otvorite WeChat i odaberite Ja > Postavke > Općenito > Stvori Sig. kopiju i pre
     <string name="guest_connect_dialog_ensure_text">Poveži</string>
     <string name="guest_connect_dialog_fail_message">Povezivanje nije uspjelo. Pokušajte ponovo.</string>
     <string name="guest_hint_connect_new_device">Odaberite novi uređaj</string>
+    <string name="guest_hint_connect_new_device_pad">Odaberite novi uređaj</string>
+    <string name="guest_hint_connect_new_device_phone">Odaberite novi uređaj</string>
     <string name="guest_install_app_hint_ensure">Preuzmi</string>
     <string name="guest_install_app_hint_summary">Nova verzija Mi Selidbe nije kompatibilna sa Mi Selidbom instaliranom na ovom uređaju. Preuzmite i instalirajte novu verziju.</string>
     <string name="guest_install_app_hint_title">Preuzmite novu verziju Mi Selidbe</string>
@@ -374,6 +378,8 @@ Otvorite WeChat i odaberite Ja > Postavke > Općenito > Stvori Sig. kopiju i pre
 %2$d. Približite oba uređaja."</string>
     <string name="install_app_new_title">Skenirajte QR kod da biste instalirali Mi Selidbu na novom uređaju</string>
     <string name="install_app_old_title">Skenirajte QR kod da biste instalirali Mi Selidbu na starom uređaju</string>
+    <string name="install_app_old_title_pad">Skenirajte QR kod za instalaciju Mi Selidbe na stari uređaj</string>
+    <string name="install_app_old_title_phone">Skenirajte QR kod za instalaciju Mi Selidbe na stari uređaj</string>
     <string name="install_app_to_another_phone_content">Instalirajte Mi Selidbu na svom novom uređaju</string>
     <string name="install_app_to_another_phone_content_global">Instalirajte Mi Selidbu</string>
     <string name="install_button">Instaliraj</string>
@@ -512,24 +518,44 @@ Otvorite WeChat i odaberite Ja > Postavke > Općenito > Stvori Sig. kopiju i pre
     <string name="new_app_name">Nova verzija</string>
     <string name="new_main_activity_label">Mi Selidba</string>
     <string name="new_trans_intro_desc_2">Ne morate unjeti zaporku u novoj verziju Mi Selidbe. Samo otvorite Mi Selidbu na Vašem starom uređaju, dotaknite \"Ja sam pošiljatelj\" i dotaknite ime hotspota na koji se želite priključiti.</string>
+    <string name="new_trans_intro_desc_2_pad">U novoj verziji Mi Selidbe nije potrebno unositi zaporku za hotspot. Samo otvorite Mi Selidbu na svom starom uređaju, dodirnite \"Ja sam pošiljatelj\" i dodirnite naziv hotspota za povezivanje.</string>
+    <string name="new_trans_intro_desc_2_phone">U novoj verziji Mi Selidbe nije potrebno unositi zaporku za hotspot. Samo otvorite Mi Selidbu na svom starom uređaju, dodirnite \"Ja sam pošiljatelj\" i dodirnite naziv hotspota za povezivanje.</string>
     <string name="new_trans_intro_desc_3">Mi Selidba treba prostor za pohranu kako bi napravio paket prijenosa na Vašem starom uređaju prije slanja na novi. Oslobodite prostor za pohranu za nastavak.</string>
     <string name="new_trans_intro_desc_4">Moguće da postoji problem s kompatibilnošću uređaja, sistema ili verzije aplikacije koji sprečava neke aplikacije da se uspješno prenesu.</string>
     <string name="new_trans_intro_desc_5">Neke aplikacije (npr. financijske usluge i alati za plaćanje) ne dozvoljavaju prijenos zaporki iz sigurnosnih razloga.</string>
     <string name="new_trans_intro_desc_6">Vaš novi Mi telefon možda nema za to potrebne dozvole.</string>
+    <string name="new_trans_intro_desc_6_pad">Podaci aplikacije ne mogu se prenijeti jer Mi Selidba nema potrebna dopuštenja na uređajima koji nisu Xiaomi.</string>
+    <string name="new_trans_intro_desc_6_phone">Podaci aplikacije ne mogu se prenijeti jer Mi Selidba nema potrebna dopuštenja na uređajima koji nisu Xiaomi.</string>
     <string name="new_trans_intro_desc_7">Mi Selidba može nastaviti gdje je stala prethodni puta, međutim možda će ipak morati sve ispočetka ukoliko uređaj ima problem s kompatibilnošću koji ne dozvoljava nastavak prekinutog prijenosa.</string>
     <string name="new_trans_intro_desc_8">Wechat povijest Vašeg starog uređaja zamijenit će Wechat povijest na novom uređaju tokom prijenosa.</string>
     <string name="new_trans_intro_desc_new">"%1$d. Provjerite je li Mi Selidba na vašem novom uređaju ažurirana. Najnoviju verziju Mi Selidbe možete preuzeti u Play Storeu ili dodirnite ovdje: %2$s.
 %3$d. Ako se hotspot i dalje ne pojavljuje u Mi Selidbi, otvorite Wi-Fi postavke i provjerite vidite li je tamo. Ako je tako, vratite se na Mi Selidbu i dodirnite naziv hotspota."</string>
     <string name="new_trans_intro_desc_new_click">Preuzimanje</string>
+    <string name="new_trans_intro_desc_new_pad">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Osigurajte da je Mi Mover na vašem novom uređaju ažuriran. Možete preuzeti najnoviju verziju alatke Mi Mover u GetApps ili <Data>&lt;a href=%2$s>dodirom ovdje&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Ako se žarišna točka i dalje ne pojavljuje u alatki Mi Mover, otvorite postavke Wi-Fi mreže i pogledajte možete li je tamo vidjeti. Ako je vidite, vratite se u Mi Mover i dodirnite naziv pristupne točke."</string>
+    <string name="new_trans_intro_desc_new_pad_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Osigurajte da je Mi Mover na vašem novom uređaju ažuriran. Možete preuzeti najnoviju verziju alatke Mi Mover u GetApps ili <Data>&lt;a href=%2$s>dodirom ovdje&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Ako se žarišna točka i dalje ne pojavljuje u alatki Mi Mover, otvorite WLAN postavke i pogledajte možete li je tamo vidjeti. Ako je vidite, vratite se u Mi Mover i dodirnite naziv pristupne točke."</string>
+    <string name="new_trans_intro_desc_new_phone">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Osigurajte da je Mi Mover na vašem novom uređaju ažuriran. Možete preuzeti najnoviju verziju alatke Mi Mover u GetApps ili <Data>&lt;a href=%2$s>dodirom ovdje&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Ako se žarišna točka i dalje ne pojavljuje u alatki Mi Mover, otvorite postavke Wi-Fi mreže i pogledajte možete li je tamo vidjeti. Ako je vidite, vratite se u Mi Mover i dodirnite naziv pristupne točke."</string>
+    <string name="new_trans_intro_desc_new_phone_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Osigurajte da je Mi Mover na vašem novom uređaju ažuriran. Možete preuzeti najnoviju verziju alatke Mi Mover u GetApps ili <Data>&lt;a href=%2$s>dodirom ovdje&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Ako se žarišna točka i dalje ne pojavljuje u alatki Mi Mover, otvorite WLAN postavke i pogledajte možete li je tamo vidjeti. Ako je vidite, vratite se u Mi Mover i dodirnite naziv pristupne točke."</string>
     <string name="new_trans_intro_desc_old">%d. Ako se hotspot još uvijek nije pojavio u Mi Selidbi, otvorite Wi-Fi postavke i provjerite vidite li hotspot. Ako ga vidite, vratite se u Mi Selidbu i dotaknite naziv hotspota.</string>
     <string name="new_trans_intro_question_1">%d. Zašto ne mogu vidjeti hotspot novog uređaja na starom?</string>
+    <string name="new_trans_intro_question_1_pad">%d. Zašto ne mogu vidjeti hotspot novog uređaja na starom?</string>
+    <string name="new_trans_intro_question_1_phone">%d. Zašto ne mogu vidjeti hotspot novog uređaja na starom?</string>
     <string name="new_trans_intro_question_2">%d. Koja je zaporka za hotspot?</string>
     <string name="new_trans_intro_question_3">%d. Zašto piše da nemam dovoljno prostora za pohranu na starom uređaju?</string>
+    <string name="new_trans_intro_question_3_pad">%d. Zašto piše da na starom uređaju nema dovoljno prostora za pohranu?</string>
+    <string name="new_trans_intro_question_3_phone">%d. Zašto piše da na starom uređaju nema dovoljno prostora za pohranu?</string>
     <string name="new_trans_intro_question_4">%d. Zašto se sve aplikacije nisu uspješno prenjele?</string>
     <string name="new_trans_intro_question_5">%d. Zašto se zaporke nekih aplikacija trećih strana nisu uspješno prenjele?</string>
     <string name="new_trans_intro_question_6">%d. Zašto se podaci aplikacija ne mogu prenjeti s uređaja treće strane?</string>
+    <string name="new_trans_intro_question_6_pad">%d. Zašto se podaci aplikacije ne mogu prenijeti s uređaja koji nije Xiaomi?</string>
+    <string name="new_trans_intro_question_6_phone">%d. Zašto se podaci aplikacije ne mogu prenijeti s uređaja koji nije Xiaomi?</string>
     <string name="new_trans_intro_question_7">%d. Ako izađem iz Mi Selidbe usred prijenosa, hoći li idući puta morat započinjat sve iznova?</string>
     <string name="new_trans_intro_question_8">%d. Zašto je moja WeChat povijest nestala na m+novom uređaju?</string>
+    <string name="new_trans_intro_question_8_pad">%d. Zašto je moja WeChat povijest nestala na novom uređaju?</string>
+    <string name="new_trans_intro_question_8_phone">%d. Zašto je moja WeChat povijest nestala na novom uređaju?</string>
     <string name="new_version_transfer_downloading">Ažuriranje Mi Selidbe</string>
     <string name="new_version_transfer_downloading_progress">%s</string>
     <string name="new_version_transfer_upgrading">Ažuriranje…</string>
@@ -712,6 +738,8 @@ Oslobodite se barem %s."</string>
     <string name="scanner_quit_alert_btn_negative">Prekid</string>
     <string name="scanner_quit_alert_btn_positive">Ne odustaj</string>
     <string name="scanner_quit_alert_message">Ako ponovo napustite Mi Selidbu, dva ćete uređaja morati opet spojiti. Svejedno napustiti?</string>
+    <string name="scanner_quit_alert_message_pad">Morat ćete ponovno spojiti dva uređaja ako sada zatvorite Mi Selidbu. Svejedno zatvoriti?</string>
+    <string name="scanner_quit_alert_message_phone">Morat ćete ponovno spojiti dva uređaja ako sada zatvorite Mi Selidbu. Svejedno zatvoriti?</string>
     <string name="scanner_quit_alert_title">Prekinuti sada?</string>
     <string name="scanner_send_dialog_btn">Razumijem</string>
     <string name="scanner_send_dialog_message">Ne isključujte Wi-Fi ili prebacivajte između mreža tijekom prijenosa.</string>
@@ -723,6 +751,8 @@ Oslobodite se barem %s."</string>
     <string name="scanner_wechat_overwrite_hit">Zbog postavljenih ograničenja aplikacija trećih strana, povijest razgovora i ostali podaci aplikacija na Vašem novom uređaju bit će zamijenjeni onima s Vašeg starog uređaja tek kada je prijenos završen.</string>
     <string name="search_menu_title">Pretraži</string>
     <string name="searching_for_new_device">Traženje novog uređaja…</string>
+    <string name="searching_for_new_device_pad">Traženje novog uređaja…</string>
+    <string name="searching_for_new_device_phone">Traženje novog uređaja…</string>
     <string name="secret_package_title_file">Datoteke</string>
     <string name="secret_package_title_gallery">Albumi</string>
     <string name="secret_package_title_note">Bilješke</string>
@@ -753,6 +783,8 @@ Oslobodite se barem %s."</string>
     <string name="select_mi_summary">Xiaomi i Redmi</string>
     <string name="select_mi_title">Xiaomi</string>
     <string name="select_old_device_title">Odaberite model starog uređaja</string>
+    <string name="select_old_device_title_pad">Odaberite tip starog uređaja</string>
+    <string name="select_old_device_title_phone">Odaberite tip starog uređaja</string>
     <string name="selected">Odabrano</string>
     <string name="send">Pošalji</string>
     <string name="send_verification_code_fail">"Nije mogu'e poslati kod potvrde"</string>
@@ -842,6 +874,7 @@ Oslobodite se barem %s."</string>
     <string name="thursday">Četvrtak</string>
     <string name="thursday_short">Čet</string>
     <string name="thursday_shortest">Čet</string>
+    <string name="time">Period vremena</string>
     <string name="time_concentrator" />
     <string name="time_picker_dialog_title">Postavite vrijeme</string>
     <string name="time_picker_label_hour">H</string>
@@ -900,6 +933,8 @@ Oslobodite se barem %s."</string>
     <string name="trans_install_guide_new_content_first">"Skenirajte ovaj QR kod koristeći svoj novi uređaj.
 Preuzmite i instalirajte Mi Selidbu."</string>
     <string name="trans_install_guide_old_content_first">Skenirajte ovaj QR kod starim uređajem za preuzimanje i instaliranje Mi Selidbe.</string>
+    <string name="trans_install_guide_old_content_first_pad">Skenirajte ovaj QR kod svojim starim uređajem kako biste preuzeli i instalirali Mi Selidbu.</string>
+    <string name="trans_install_guide_old_content_first_phone">Skenirajte ovaj QR kod svojim starim uređajem kako biste preuzeli i instalirali Mi Selidbu.</string>
     <string name="trans_install_guide_text">Skenirajte za ažuriranje Mi Selidbe</string>
     <string name="trans_intro_title">Često postavljena pitanja</string>
     <string name="trans_main_activity_tutor_first">Prenesi stavke na novi uređaj</string>
