--- a/qcom-sdk36/Czech/main/MiMover.apk/res/values-cs/strings.xml
+++ b/qcom-sdk36/Czech/main/MiMover.apk/res/values-cs/strings.xml
@@ -115,6 +115,8 @@
     <string name="clearable_edittext_clear_description">Smazat</string>
     <string name="close">Zavřít</string>
     <string name="close_cellular_summary">Vaše zařízení nyní využívá kvůli systémovým omezením mobilní datové připojení. Vypněte mobilní data a připojte se znovu k novému zařízení.</string>
+    <string name="close_cellular_summary_pad">Vaše zařízení nyní využívá kvůli systémovým omezením mobilní datové připojení. Vypněte mobilní data a připojte se znovu k novému zařízení.</string>
+    <string name="close_cellular_summary_phone">Vaše zařízení nyní využívá kvůli systémovým omezením mobilní datové připojení. Vypněte mobilní data a připojte se znovu k novému zařízení.</string>
     <string name="close_cellular_title">Připojení se nezdařilo</string>
     <string name="close_twice_auth_btn">Vypnout dvoufaktorové ověření</string>
     <string name="close_twice_auth_note">"Poznámka:
@@ -301,6 +303,8 @@ Otevřete WeChat a přejděte do Me > Settings > General > Back up &amp; migrate
     <string name="guest_connect_dialog_ensure_text">Připojit</string>
     <string name="guest_connect_dialog_fail_message">Připojení se nezdařilo. Zkuste to znovu.</string>
     <string name="guest_hint_connect_new_device">Zvolte nové zařízení</string>
+    <string name="guest_hint_connect_new_device_pad">Zvolte nové zařízení</string>
+    <string name="guest_hint_connect_new_device_phone">Zvolte nové zařízení</string>
     <string name="guest_install_app_hint_ensure">Stáhnout</string>
     <string name="guest_install_app_hint_summary">Verze Přesunu do nového zařízení není kompatibilní s verzí na tomto zařízení. Stáhněte si a nainstalujte nejnovější verzi aplikace.</string>
     <string name="guest_install_app_hint_title">Stáhnout nejnovější verzi Přesunu do nového zařízení</string>
@@ -374,6 +378,8 @@ Otevřete WeChat a přejděte do Me > Settings > General > Back up &amp; migrate
 %2$d. Umístěte obě zařízení blízko sebe."</string>
     <string name="install_app_new_title">Pro instalaci aplikace na novém zařízení naskenujte QR kód</string>
     <string name="install_app_old_title">Pro instalaci aplikace na starém zařízení naskenujte QR kód</string>
+    <string name="install_app_old_title_pad">Pro instalaci Přesun do nového zařízení (Mi Mover) na starém zařízení naskenujte QR kód</string>
+    <string name="install_app_old_title_phone">Pro instalaci Přesun do nového zařízení (Mi Mover) na starém zařízení naskenujte QR kód</string>
     <string name="install_app_to_another_phone_content">Nainstalujte Přenos do nového zařízení na novém zařízení</string>
     <string name="install_app_to_another_phone_content_global">Nainstalujte Přesun do nového zařízení</string>
     <string name="install_button">Instalovat</string>
@@ -390,7 +396,7 @@ Otevřete WeChat a přejděte do Me > Settings > General > Back up &amp; migrate
     <string name="loading_data">Ještě chvilku…</string>
     <string name="location_permission_desc">Pro nalezení zařízení v okolí</string>
     <string name="location_permission_request">Pro připojení k zařízením v okolí</string>
-    <string name="lockscreen_access">Pattern area</string>
+    <string name="lockscreen_access">Oblast vzoru</string>
     <string name="login">Přihlásit se</string>
     <string name="login_failed">Přihlášení se nezdařilo. Zkuste to znovu.</string>
     <string name="logining">Přihlašování…</string>
@@ -512,24 +518,44 @@ Otevřete WeChat a přejděte do Me > Settings > General > Back up &amp; migrate
     <string name="new_app_name">Nová verze</string>
     <string name="new_main_activity_label">Přesun do nového zařízení (Mi Mover)</string>
     <string name="new_trans_intro_desc_2">V nové verzi aplikace není potřeba zadávat heslo. Jednoduše otevřete Přenos do nového zařízení na starém zařízení, klepněte na \"Jsem odesílatel\" a klepněte na hotspot, ke kterému se chcete připojit.</string>
+    <string name="new_trans_intro_desc_2_pad">V nové verzi aplikace Přesun do nového zařízení (Mi Mover) není potřeba zadávat heslo hotspotu. Jednoduše otevřete Přesun do nového zařízení (Mi Mover) na starém zařízení, klepněte na „Jsem odesílatel“ a klepněte na hotspot, ke kterému se chcete připojit.</string>
+    <string name="new_trans_intro_desc_2_phone">V nové verzi aplikace Přesun do nového zařízení (Mi Mover) není potřeba zadávat heslo hotspotu. Jednoduše otevřete Přesun do nového zařízení (Mi Mover) na starém zařízení, klepněte na „Jsem odesílatel“ a klepněte na hotspot, ke kterému se chcete připojit.</string>
     <string name="new_trans_intro_desc_3">Aplikace Přesun do nového zařízení vyžaduje před zahájením přenosu vytvoření datových balíčků. Pro pokračování uvolněte místo na úložišti.</string>
     <string name="new_trans_intro_desc_4">Přenos některých aplikací mohl být přerušen kvůli nekompatibilnímu zařízení, systému nebo verzi aplikace.</string>
     <string name="new_trans_intro_desc_5">Některé aplikace (např. finanční služby a platební aplikace) nedovolují přenos hesel z bezpečnostních důvodů.</string>
     <string name="new_trans_intro_desc_6">Váš nový Mi telefon pravděpodobně nemá oprávnění k takovémuto přenosu.</string>
+    <string name="new_trans_intro_desc_6_pad">Data aplikace nelze přenést, protože Přesun do nového zařízení (Mi Mover) nemá na jiných než Xiaomi zařízeních potřebná oprávnění.</string>
+    <string name="new_trans_intro_desc_6_phone">Data aplikace nelze přenést, protože Přesun do nového zařízení (Mi Mover) nemá na jiných než Xiaomi zařízeních potřebná oprávnění.</string>
     <string name="new_trans_intro_desc_7">Aplikace zahájí přenos v bodě, kde byl naposledy ukončen. Problém s kompatibilitou zařízení však může způsobit, že přenos nebude možné obnovit a budete tedy muset začít od začátku.</string>
     <string name="new_trans_intro_desc_8">Historie aplikace WeChat ze starého zařízení přepíše po přenosu historii WeChatu na novém zařízení.</string>
     <string name="new_trans_intro_desc_new">"%1$d. Aplikace Přesun do nového zařízení nainstalovaná ve vašem zařízewní musí být aktuální. Nejnovější verzi aplikace Přesun do nového zařízení si můžete stáhnout v Play Store nebo po klepnutí sem: %2$s.
 %3$d. Pokud se i tak v aplikaci Přesun do do nového zařízení nezobrazí hotspot, jděte do nastavení Wi-Fi a podívejte se, zda jej tam uvidíte. Pokud ano, přejděte zpět do aplikace Přesun do nového zařízení a klepněte na název hotspotu."</string>
     <string name="new_trans_intro_desc_new_click">Stáhnout</string>
+    <string name="new_trans_intro_desc_new_pad">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Aplikace Přesun do nového zařízení (Mi Mover) nainstalovaná ve vašem zařízení musí být aktuální. Nejnovější verzi aplikace Přesun do nového zařízení (Mi Mover) si můžete stáhnout v GetApps nebo po <Data>&lt;a href=%2$s>klepnutí sem&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Pokud se i tak v aplikaci Přesun do do nového zařízení (Mi Mover) nezobrazí hotspot, jděte do nastavení Wi-Fi a podívejte se, zda jej tam uvidíte. Pokud ano, přejděte zpět do aplikace Přesun do nového zařízení (Mi Mover) a klepněte na název hotspotu."</string>
+    <string name="new_trans_intro_desc_new_pad_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Aplikace Přesun do nového zařízení (Mi Mover) nainstalovaná ve vašem zařízení musí být aktuální. Nejnovější verzi aplikace Přesun do nového zařízení (Mi Mover) si můžete stáhnout v GetApps nebo po <Data>&lt;a href=%2$s>klepnutí sem&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Pokud se i tak v aplikaci Přesun do do nového zařízení (Mi Mover) nezobrazí hotspot, jděte do nastavení WLAN a podívejte se, zda jej tam uvidíte. Pokud ano, přejděte zpět do aplikace Přesun do nového zařízení (Mi Mover) a klepněte na název hotspotu."</string>
+    <string name="new_trans_intro_desc_new_phone">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Aplikace Přesun do nového zařízení (Mi Mover) nainstalovaná ve vašem zařízení musí být aktuální. Nejnovější verzi aplikace Přesun do nového zařízení (Mi Mover) si můžete stáhnout v GetApps nebo po <Data>&lt;a href=%2$s>klepnutí sem&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Pokud se i tak v aplikaci Přesun do do nového zařízení (Mi Mover) nezobrazí hotspot, jděte do nastavení Wi-Fi a podívejte se, zda jej tam uvidíte. Pokud ano, přejděte zpět do aplikace Přesun do nového zařízení (Mi Mover) a klepněte na název hotspotu."</string>
+    <string name="new_trans_intro_desc_new_phone_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Aplikace Přesun do nového zařízení (Mi Mover) nainstalovaná ve vašem zařízení musí být aktuální. Nejnovější verzi aplikace Přesun do nového zařízení (Mi Mover) si můžete stáhnout v GetApps nebo po <Data>&lt;a href=%2$s>klepnutí sem&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Pokud se i tak v aplikaci Přesun do do nového zařízení (Mi Mover) nezobrazí hotspot, jděte do nastavení WLAN a podívejte se, zda jej tam uvidíte. Pokud ano, přejděte zpět do aplikace Přesun do nového zařízení (Mi Mover) a klepněte na název hotspotu."</string>
     <string name="new_trans_intro_desc_old">%d. Pokud se hotspot v aplikaci ani poté nezobrazí, otevřete nastavení sítě Wi-Fi a zkontrolujte, zda se hotspot zobrazí tam. Pokud hotspot v nastavení Wi-Fi vidíte, přejděte zpět do aplikace a připojte se k tomuto hotspotu.</string>
     <string name="new_trans_intro_question_1">%d. Proč se hotspot nového zařízení nezobrazuje na mém starém zařízení?</string>
+    <string name="new_trans_intro_question_1_pad">%d. Proč se hotspot nového zařízení nezobrazuje na mém starém zařízení?</string>
+    <string name="new_trans_intro_question_1_phone">%d. Proč se hotspot nového zařízení nezobrazuje na mém starém zařízení?</string>
     <string name="new_trans_intro_question_2">%d. Jaké je heslo hotspotu?</string>
     <string name="new_trans_intro_question_3">%d. Proč systém zobrazuje upozornění, že na úložišti starého zařízení není dostatek volného místa?</string>
+    <string name="new_trans_intro_question_3_pad">%d. Proč systém zobrazuje upozornění, že na úložišti starého zařízení není dostatek volného místa?</string>
+    <string name="new_trans_intro_question_3_phone">%d. Proč systém zobrazuje upozornění, že na úložišti starého zařízení není dostatek volného místa?</string>
     <string name="new_trans_intro_question_4">%d. Proč nebyly všechny aplikace úspěšně přeneseny?</string>
     <string name="new_trans_intro_question_5">%d. Proč nebyla hesla některých účtů aplikací třetích stran úspěšně přenesena?</string>
     <string name="new_trans_intro_question_6">%d. Proč nemohu přenést data aplikací ze zařízení třetí strany?</string>
+    <string name="new_trans_intro_question_6_pad">%d. Proč nemohu přenést data aplikací z jiného než Xiaomi zařízení?</string>
+    <string name="new_trans_intro_question_6_phone">%d. Proč nemohu přenést data aplikací z jiného než Xiaomi zařízení?</string>
     <string name="new_trans_intro_question_7">%d. Pokud z aplikace během přenosu odejdu, budu muset příště spustit přenos znovu od začátku?</string>
     <string name="new_trans_intro_question_8">%d. Proč nemůžu na novém zařízení najít historii konverzací aplikace WeChat?</string>
+    <string name="new_trans_intro_question_8_pad">%d. Proč nemůžu na novém zařízení najít historii konverzací aplikace WeChat?</string>
+    <string name="new_trans_intro_question_8_phone">%d. Proč nemůžu na novém zařízení najít historii konverzací aplikace WeChat?</string>
     <string name="new_version_transfer_downloading">Aktualizace Přesunu do nového zařízení (Mi Mover)</string>
     <string name="new_version_transfer_downloading_progress">%s</string>
     <string name="new_version_transfer_upgrading">Aktualizace…</string>
@@ -712,6 +738,8 @@ Uvolněte alespoň %s."</string>
     <string name="scanner_quit_alert_btn_negative">Ukončit</string>
     <string name="scanner_quit_alert_btn_positive">Neukončovat</string>
     <string name="scanner_quit_alert_message">Pokud Přesun do nového zařízení nyní ukončíte, budete muset příště připojit zařízení znovu. Přesto ukončit?</string>
+    <string name="scanner_quit_alert_message_pad">Pokud Přesun do nového zařízení (Mi Mover) nyní ukončíte, budete muset příště připojit zařízení znovu. Přesto ukončit?</string>
+    <string name="scanner_quit_alert_message_phone">Pokud Přesun do nového zařízení (Mi Mover) nyní ukončíte, budete muset příště připojit zařízení znovu. Přesto ukončit?</string>
     <string name="scanner_quit_alert_title">Ukončit nyní?</string>
     <string name="scanner_send_dialog_btn">Rozumím</string>
     <string name="scanner_send_dialog_message">Během přenosu nevypínejte Wi-Fi a nepřepínejte mezi sítěmi.</string>
@@ -723,6 +751,8 @@ Uvolněte alespoň %s."</string>
     <string name="scanner_wechat_overwrite_hit">Kvůli omezení ze strany aplikace třetí strany budou po dokončení přenosu některé položky (historie konverzací a další data aplikace) na novém zařízení přepsány těmi ze starého zařízení.</string>
     <string name="search_menu_title">Hledat</string>
     <string name="searching_for_new_device">Hledání nového zařízení…</string>
+    <string name="searching_for_new_device_pad">Vyhledávání nového zařízení…</string>
+    <string name="searching_for_new_device_phone">Vyhledávání nového zařízení…</string>
     <string name="secret_package_title_file">Soubory</string>
     <string name="secret_package_title_gallery">Alba</string>
     <string name="secret_package_title_note">Poznámky</string>
@@ -753,6 +783,8 @@ Uvolněte alespoň %s."</string>
     <string name="select_mi_summary">Xiaomi a Redmi</string>
     <string name="select_mi_title">Xiaomi</string>
     <string name="select_old_device_title">Zvolte model starého zařízení</string>
+    <string name="select_old_device_title_pad">Zvolte typ starého zařízení</string>
+    <string name="select_old_device_title_phone">Zvolte typ starého zařízení</string>
     <string name="selected">Vybráno</string>
     <string name="send">Odeslat</string>
     <string name="send_verification_code_fail">Odeslání ověřovacího kódu se nezdařilo</string>
@@ -842,6 +874,7 @@ Uvolněte alespoň %s."</string>
     <string name="thursday">Čtvrtek</string>
     <string name="thursday_short">Čtv</string>
     <string name="thursday_shortest">Čtv</string>
+    <string name="time">Časové období</string>
     <string name="time_concentrator" />
     <string name="time_picker_dialog_title">Nastavit čas</string>
     <string name="time_picker_label_hour">H</string>
@@ -900,6 +933,8 @@ Uvolněte alespoň %s."</string>
     <string name="trans_install_guide_new_content_first">"Naskenujte tento QR kód pomocí nového zařízení.
 Stáhněte a nainstalujte Přesun do nového zařízení (Mi Mover)."</string>
     <string name="trans_install_guide_old_content_first">Pro stažení a instalaci aplikace Přesun do nového zařízení naskenujte tento kód svým starým zařízením.</string>
+    <string name="trans_install_guide_old_content_first_pad">Pro stažení a instalaci aplikace Přesun do nového zařízení (Mi Mover) naskenujte tento kód svým starým zařízením.</string>
+    <string name="trans_install_guide_old_content_first_phone">Pro stažení a instalaci aplikace Přesun do nového zařízení (Mi Mover) naskenujte tento kód svým starým zařízením.</string>
     <string name="trans_install_guide_text">Naskenujte pro aktualizaci aplikace</string>
     <string name="trans_intro_title">Časté dotazy</string>
     <string name="trans_main_activity_tutor_first">Přenos položek do nového zařízení</string>
