--- a/qcom-sdk36/Czech/main/Mms.apk/res/values-cs/strings.xml
+++ b/qcom-sdk36/Czech/main/Mms.apk/res/values-cs/strings.xml
@@ -173,6 +173,8 @@ Zkuste to znovu"</string>
     <string name="button_pre_slide">Předchozí</string>
     <string name="button_resend_message">Odeslat znovu</string>
     <string name="button_unfold">Rozbalit</string>
+    <string name="calendar_date_picker_a11y_next_month">Přejít na další měsíc</string>
+    <string name="calendar_date_picker_a11y_prev_month">Přejít na předchozí měsíc</string>
     <string name="can_not_send_by_rcs">Zprávy 5G nelze využít</string>
     <string name="can_not_view_group_chat_stranger">Nelze zobrazit informace o neznámých uživatelích.</string>
     <string name="cancel">Zrušit</string>
