--- a/qcom-sdk36/Dutch/main/Mms.apk/res/values-nl/strings.xml
+++ b/qcom-sdk36/Dutch/main/Mms.apk/res/values-nl/strings.xml
@@ -173,6 +173,8 @@ Probeer het opnieuw."</string>
     <string name="button_pre_slide">Vorige</string>
     <string name="button_resend_message">Send again</string>
     <string name="button_unfold">Ontvouwen</string>
+    <string name="calendar_date_picker_a11y_next_month">Naar volgende maand gaan</string>
+    <string name="calendar_date_picker_a11y_prev_month">Naar vorige maand gaan</string>
     <string name="can_not_send_by_rcs">Kan 5G-berichten niet gebruiken</string>
     <string name="can_not_view_group_chat_stranger">Kan de details van vreemden niet bekijken.</string>
     <string name="cancel">Annuleren</string>
