--- a/qcom-sdk36/Finnish/main/Mms.apk/res/values-fi/strings.xml
+++ b/qcom-sdk36/Finnish/main/Mms.apk/res/values-fi/strings.xml
@@ -173,6 +173,8 @@ Yritä uudelleen."</string>
     <string name="button_pre_slide">Edellinen</string>
     <string name="button_resend_message">Lähetä uudelleen</string>
     <string name="button_unfold">Avaa kaikki</string>
+    <string name="calendar_date_picker_a11y_next_month">Vaihda seuraavaan kuukauteen</string>
+    <string name="calendar_date_picker_a11y_prev_month">Vaihda edelliseen kuukauteen</string>
     <string name="can_not_send_by_rcs">5G-viestintää ei voi käyttää</string>
     <string name="can_not_view_group_chat_stranger">Tuntemattomien tietoja ei voi tarkastella.</string>
     <string name="cancel">Peruuta</string>
