--- a/qcom-sdk36/French/main/Mms.apk/res/values-fr/strings.xml
+++ b/qcom-sdk36/French/main/Mms.apk/res/values-fr/strings.xml
@@ -173,6 +173,8 @@ Réessayer."</string>
     <string name="button_pre_slide">Précédent</string>
     <string name="button_resend_message">Renvoyer</string>
     <string name="button_unfold">Dérouler</string>
+    <string name="calendar_date_picker_a11y_next_month">Passer au mois suivant</string>
+    <string name="calendar_date_picker_a11y_prev_month">Passer au mois précédent</string>
     <string name="can_not_send_by_rcs">"Impossible d'utiliser la messagerie 5G"</string>
     <string name="can_not_view_group_chat_stranger">"Impossible d'afficher les détails des étrangers."</string>
     <string name="cancel">Annuler</string>
