--- a/qcom-sdk36/German/main/Mms.apk/res/values-de/strings.xml
+++ b/qcom-sdk36/German/main/Mms.apk/res/values-de/strings.xml
@@ -173,6 +173,8 @@ Erneut versuchen."</string>
     <string name="button_pre_slide">Vorheriges</string>
     <string name="button_resend_message">Erneut senden</string>
     <string name="button_unfold">Entfalten</string>
+    <string name="calendar_date_picker_a11y_next_month">Zum nächsten Monat wechseln</string>
+    <string name="calendar_date_picker_a11y_prev_month">Zum vorherigen Monat wechseln</string>
     <string name="can_not_send_by_rcs">5G-Nachrichten können nicht verwendet werden</string>
     <string name="can_not_view_group_chat_stranger">Ich kann die Details von Fremden nicht sehen.</string>
     <string name="cancel">Abbrechen</string>
