--- a/qcom-sdk36/Greek/main/MiMover.apk/res/values-el/strings.xml
+++ b/qcom-sdk36/Greek/main/MiMover.apk/res/values-el/strings.xml
@@ -115,6 +115,8 @@
     <string name="clearable_edittext_clear_description">Εκκαθάριση</string>
     <string name="close">Κλείσιμο</string>
     <string name="close_cellular_summary">Αυτή τη στιγμή α συσκευή σας χρησιμοποιεί δεδομένα κινητής τηλεφωνίας λόγω περιορισμών συστήματος. Απενεργοποιήστε τα δεδομένα κινητής τηλεφωνίας και συνδεθείτε ξανά στη νέα συσκευή.</string>
+    <string name="close_cellular_summary_pad">Η συσκευή σας χρησιμοποιεί δεδομένα κινητής τηλεφωνίας λόγω περιορισμών του συστήματος. Απενεργοποιήστε τα δεδομένα κινητής τηλεφωνίας και συνδεθείτε ξανά στη νέα συσκευή.</string>
+    <string name="close_cellular_summary_phone">Η συσκευή σας χρησιμοποιεί δεδομένα κινητής τηλεφωνίας λόγω περιορισμών του συστήματος. Απενεργοποιήστε τα δεδομένα κινητής τηλεφωνίας και συνδεθείτε ξανά στη νέα συσκευή.</string>
     <string name="close_cellular_title">Αδυναμία σύνδεσης</string>
     <string name="close_twice_auth_btn">Απενεργοποίηση διπλής επαλήθευσης</string>
     <string name="close_twice_auth_note">"Σημείωση:
@@ -301,6 +303,8 @@
     <string name="guest_connect_dialog_ensure_text">Σύνδεση</string>
     <string name="guest_connect_dialog_fail_message">Αδυναμία σύνδεσης. Προσπαθήστε ξανά.</string>
     <string name="guest_hint_connect_new_device">Επιλέξτε νέα συσκευή</string>
+    <string name="guest_hint_connect_new_device_pad">Επιλέξτε νέα συσκευή</string>
+    <string name="guest_hint_connect_new_device_phone">Επιλέξτε νέα συσκευή</string>
     <string name="guest_install_app_hint_ensure">Λήψη</string>
     <string name="guest_install_app_hint_summary">Η νέα έκδοση της Μεταφοράς Mi δεν είναι συμβατή με αυτή που έχει εγκατασταθεί σε αυτή τη συσκευή. Πραγματοποιήστε λήψη και εγκατάσταση της νέας έκδοσης.</string>
     <string name="guest_install_app_hint_title">Πραγματοποιήστε λήψη της νέας έκδοσης της Μεταφοράς Mi</string>
@@ -374,6 +378,8 @@
 %2$d. Κρατήστε τις συσκευές σας σε κοντινή απόσταση."</string>
     <string name="install_app_new_title">Σαρώστε τον κωδικό QR για εγκατάσταση της Μεταφοράς Mi στη νέα συσκευή</string>
     <string name="install_app_old_title">Σαρώστε τον κωδικό QR για να εγκαταστήσετε την Μεταφορά Mi στην παλιά συσκευή</string>
+    <string name="install_app_old_title_pad">Σαρώστε τον κωδικό QR για να εγκαταστήσετε τη Μεταφορά Mi στην παλιά συσκευή</string>
+    <string name="install_app_old_title_phone">Σαρώστε τον κωδικό QR για να εγκαταστήσετε τη Μεταφορά Mi στην παλιά συσκευή</string>
     <string name="install_app_to_another_phone_content">Εγκαταστήστε τη Μεταφορά Mi στη νέα σας συσκευή</string>
     <string name="install_app_to_another_phone_content_global">Εγκατάσταση της Μεταφοράς Mi</string>
     <string name="install_button">Εγκατάσταση</string>
@@ -512,24 +518,44 @@
     <string name="new_app_name">Νέα έκδοση</string>
     <string name="new_main_activity_label">Μεταφορά Mi</string>
     <string name="new_trans_intro_desc_2">Δεν χρειάζεται να εισαγάγετε κωδικό στη νέα έκδοση της Μεταφοράς Mi. Απλά ανοίξτε τη Μεταφορά Mi στην παλαιά σας συσκευή, πατήστε \"Είμαι αποστολέας\" και πατήστε το όνομα του φορητού σημείου πρόσβασης για να συνδεθείτε.</string>
+    <string name="new_trans_intro_desc_2_pad">Δεν χρειάζεται να εισαγάγετε κωδικό στη νέα έκδοση της Μεταφοράς Mi. Απλά ανοίξτε τη Μεταφορά Mi στην παλαιά σας συσκευή, πατήστε \"Είμαι αποστολέας\" και πατήστε το όνομα του φορητού σημείου πρόσβασης για να συνδεθείτε.</string>
+    <string name="new_trans_intro_desc_2_phone">Δεν χρειάζεται να εισαγάγετε κωδικό στη νέα έκδοση της Μεταφοράς Mi. Απλά ανοίξτε τη Μεταφορά Mi στην παλαιά σας συσκευή, πατήστε \"Είμαι αποστολέας\" και πατήστε το όνομα του φορητού σημείου πρόσβασης για να συνδεθείτε.</string>
     <string name="new_trans_intro_desc_3">Η Μεταφορά Mi χρειάζεται χώρο αποθήκευσης για να δημιουργήσει πακέτο μεταφοράς στην παλαιά σας συσκευή πριν το στείλει στη νέα συσκευή. Απελευθερώσατε χώρο αποθήκευσης για να συνεχίσετε.</string>
     <string name="new_trans_intro_desc_4">Ενδέχεται να υπάρχουν ζητήματα συσκευής, συστήματος και έκδοσης εφαρμογής που αποτρέπουν την επιτυχή μεταφορά ορισμένων εφαρμογών.</string>
     <string name="new_trans_intro_desc_5">Ορισμένες εφαρμογές (π.χ. χρηματοπιστωτικές υπηρεσίες και εργαλεία πληρωμής) δεν επιτρέπουν τη μεταφορά κωδικών για λόγους ασφαλείας.</string>
     <string name="new_trans_intro_desc_6">Το νέο σας τηλέφωνο Mi ενδέχεται να μην έχει τις απαιτούμενες άδειες να το κάνει αυτό.</string>
+    <string name="new_trans_intro_desc_6_pad">Δεν είναι δυνατή η μεταφορά δεδομένων εφαρμογών, επειδή η Μεταφορά Mi δεν έχει τις απαραίτητες άδειες σε συσκευές που δεν είναι Xiaomi.</string>
+    <string name="new_trans_intro_desc_6_phone">Δεν είναι δυνατή η μεταφορά δεδομένων εφαρμογών, επειδή η Μεταφορά Mi δεν έχει τις απαραίτητες άδειες σε συσκευές που δεν είναι Xiaomi.</string>
     <string name="new_trans_intro_desc_7">Η Μεταφορά Mi θα είναι σε θέση να συνεχίσει από το σημείο που σταματήσατε. Ωστόσο, ενδέχεται να χρειαστεί να επανεκκινήσετε τη συσκευή σας εάν ζητήματα συμβατότητας σας αποτρέπουν να συνεχίσετε τη μεταφορά που είχατε διακόψει.</string>
     <string name="new_trans_intro_desc_8">Το ιστορικό της WeChat από την παλαιά συσκευή θα αντικαταστήσει το ιστορικό της WeChat από τη νέα σας συσκευή κατά τη διάρκεια της μεταφοράς.</string>
     <string name="new_trans_intro_desc_new">"%1$d. Βεβαιωθείτε ότι η Μεταφορά Mi στη νέα σας συσκευή είναι ενημερωμένη. Μπορείτε να κάνετε λήψη της πιο πρόσφατης έκδοσης της Μεταφοράς Mi στο Play Store ή πατήστε εδώ: %2$s.
 %3$d. Εάν το σημείο πρόσβασης εξακολουθεί να μην εμφανίζεται στη Μεταφορά Mi, ανοίξτε τις ρυθμίσεις Wi-Fi και ελέγξτε αν μπορείτε να το δείτε εκεί. Εάν ναι, επιστρέψτε στη Μεταφορά Mi και πατήστε το όνομα του σημείου πρόσβασης."</string>
     <string name="new_trans_intro_desc_new_click">Λήψη</string>
+    <string name="new_trans_intro_desc_new_pad">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Βεβαιωθείτε ότι η Μεταφορά Mi έχει ενημερωθεί στη νέα σας συσκευή. Μπορείτε να πραγματοποιήσετε λήψη της τελευταίας έκδοσης της Μεταφορά Mi στο GetApps ή <Data>&lt;a href=%2$s>πατώντας εδώ.&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Αν εξακολουθεί το σημείο πρόσβασης να μην εμφανίζεται στη Μεταφορά Mi, ανοίξτε τις ρυθμίσεις Wi-Fi και ελέγξτε αν μπορείτε να το δείτε εκεί. Αν γίνει αυτό, μεταβείτε πίσω στη Μεταφορά Mi και πατήστε το όνομα του σημείου πρόσβασης."</string>
+    <string name="new_trans_intro_desc_new_pad_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>Βεβαιωθείτε ότι η Μεταφορά Mi έχει ενημερωθεί στη νέα σας συσκευή. Μπορείτε να πραγματοποιήσετε λήψη της τελευταίας έκδοσης της Μεταφοράς Mi στο GetApps ή <Data>&lt;a href=%2$s>πατώντας εδώ.&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Αν εξακολουθεί το σημείο πρόσβασης να μην εμφανίζεται στη Μεταφορά Mi, ανοίξτε τις ρυθμίσεις WLAN και ελέγξτε αν μπορείτε να το δείτε εκεί. Αν γίνει αυτό, μεταβείτε πίσω στη Μεταφορά Mi και πατήστε το όνομα του σημείου πρόσβασης."</string>
+    <string name="new_trans_intro_desc_new_phone">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Βεβαιωθείτε ότι η Μεταφορά MI έχει ενημερωθεί στη νέα σας συσκευή. Μπορείτε να πραγματοποιήσετε λήψη της τελευταίας έκδοσης της Μεταφοράς Mi στο GetApps ή <Data>&lt;a href=%2$s>πατώντας εδώ.&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Αν εξακολουθεί το σημείο πρόσβασης να μην εμφανίζεται στη Μεταφορά Mi, ανοίξτε τις ρυθμίσεις Wi-Fi και ελέγξτε αν μπορείτε να το δείτε εκεί. Αν γίνει αυτό, μεταβείτε πίσω στη Μεταφορά Mi και πατήστε το όνομα του σημείου πρόσβασης."</string>
+    <string name="new_trans_intro_desc_new_phone_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Βεβαιωθείτε ότι η Μεταφορά Mi έχει ενημερωθεί στη νέα σας συσκευή. Μπορείτε να πραγματοποιήσετε λήψη της τελευταίας έκδοσης της Μεταφοράς Mi στο GetApps ή <Data>&lt;a href=%2$s>πατώντας εδώ.&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Αν εξακολουθεί το σημείο πρόσβασης να μην εμφανίζεται στη Μεταφορά Mi, ανοίξτε τις ρυθμίσεις WLAN και ελέγξτε αν μπορείτε να το δείτε εκεί. Αν γίνει αυτό, μεταβείτε πίσω στη Μεταφορά Mi και πατήστε το όνομα του σημείου πρόσβασης."</string>
     <string name="new_trans_intro_desc_old">%d. Εάν το φορητό σημείο πρόσβασης εξακολουθεί να μην εμφανίζεται στη Μεταφορά Mi, ανοίξτε τις ρυθμίσεις Wi-Fi και ελέγξτε εάν τη βλέπετε εκεί. Εάν τη βλέπετε, επιστρέψτε στη Μεταφορά Mi και πατήστε το όνομα του φορητού σημείου πρόσβασης.</string>
     <string name="new_trans_intro_question_1">%d. Γιατί δεν μπορώ να δω το σημείο πρόσβασης της νέας συσκευής στην παλιά;</string>
+    <string name="new_trans_intro_question_1_pad">%d. Γιατί δεν μπορώ να δω το σημείο πρόσβασης της νέας συσκευής στην παλιά;</string>
+    <string name="new_trans_intro_question_1_phone">%d. Γιατί δεν μπορώ να δω το σημείο πρόσβασης της νέας συσκευής στην παλιά;</string>
     <string name="new_trans_intro_question_2">%d. Ποιος είναι ο κωδικός πρόσβασης του σημείου πρόσβασης;</string>
     <string name="new_trans_intro_question_3">%d. Γιατί λέει ότι δεν υπάρχει αρκετός αποθηκευτικός χώρος στην παλιά συσκευή;</string>
+    <string name="new_trans_intro_question_3_pad">%d. Γιατί λέει ότι δεν υπάρχει αρκετός αποθηκευτικός χώρος στην παλιά συσκευή;</string>
+    <string name="new_trans_intro_question_3_phone">%d. Γιατί λέει ότι δεν υπάρχει αρκετός αποθηκευτικός χώρος στην παλιά συσκευή;</string>
     <string name="new_trans_intro_question_4">%d. Γιατί δεν μεταφέρονται όλες οι εφαρμογές με επιτυχία;</string>
     <string name="new_trans_intro_question_5">%d. Γιατί οι κωδικοί πρόσβασης ορισμένων λογαριασμών εφαρμογών τρίτων δεν μεταφέρονται με επιτυχία;</string>
     <string name="new_trans_intro_question_6">%d. Γιατί δεν είναι δυνατή η μεταφορά δεδομένων εφαρμογής από συσκευή τρίτου μέρους;</string>
+    <string name="new_trans_intro_question_6_pad">%d. Γιατί δεν είναι δυνατή η μεταφορά δεδομένων εφαρμογής από συσκευή που δεν είναι Xiaomi;</string>
+    <string name="new_trans_intro_question_6_phone">%d. Γιατί δεν είναι δυνατή η μεταφορά δεδομένων εφαρμογής από συσκευή που δεν είναι Xiaomi;</string>
     <string name="new_trans_intro_question_7">%d. Εάν αφήσω τη Μεταφορά Mi εν μέσω μεταφοράς, θα πρέπει να ξεκινήσω από την αρχή την επόμενη φορά;</string>
     <string name="new_trans_intro_question_8">%d. Γιατί το ιστορικό του WeChat μου εξαφανίστηκε στη νέα συσκευή;</string>
+    <string name="new_trans_intro_question_8_pad">%d. Γιατί το ιστορικό του WeChat μου εξαφανίστηκε στη νέα συσκευή;</string>
+    <string name="new_trans_intro_question_8_phone">%d. Γιατί το ιστορικό του WeChat μου εξαφανίστηκε στη νέα συσκευή;</string>
     <string name="new_version_transfer_downloading">Ενημερώστε τη Μεταφορά Mi</string>
     <string name="new_version_transfer_downloading_progress">%s</string>
     <string name="new_version_transfer_upgrading">Γίνεται ενημέρωση…</string>
@@ -712,6 +738,8 @@
     <string name="scanner_quit_alert_btn_negative">Έξοδος</string>
     <string name="scanner_quit_alert_btn_positive">Να μην γίνει έξοδος</string>
     <string name="scanner_quit_alert_message">Πρέπει να συνδέσετε ξανά τις δύο συσκευές εάν εξέλθετε τώρα από τη Μεταφορά Mi. Έξοδος παρόλα αυτά;</string>
+    <string name="scanner_quit_alert_message_pad">Θα πρέπει να συνδέσετε και πάλι τις δύο συσκευές εάν εξέλθετε τώρα από τη Μεταφορά Mi. Έξοδος παρόλα αυτά;</string>
+    <string name="scanner_quit_alert_message_phone">Θα πρέπει να συνδέσετε και πάλι τις δύο συσκευές εάν εξέλθετε τώρα από τη Μεταφορά Mi. Έξοδος παρόλα αυτά;</string>
     <string name="scanner_quit_alert_title">Έξοδος τώρα;</string>
     <string name="scanner_send_dialog_btn">Κατανοητό</string>
     <string name="scanner_send_dialog_message">Μην απενεργοποιείτε τη σύνδεση με Wi-Fi ή μην αλλάζετε δίκτυα κατά τη διάρκεια μεταφοράς.</string>
@@ -723,6 +751,8 @@
     <string name="scanner_wechat_overwrite_hit">Λόγω περιορισμών στις εφαρμογές τρίτων, τα ιστορικά συζητήσεων και άλλα δεδομένα εφαρμογής στη νέα σας συσκευή θα αντικατασταθούν με εκείνα από την παλαιά συσκευή εφόσον ολοκληρωθεί η μεταφορά.</string>
     <string name="search_menu_title">Αναζήτηση</string>
     <string name="searching_for_new_device">Αναζήτηση για τη νέα συσκευή…</string>
+    <string name="searching_for_new_device_pad">Αναζήτηση για τη νέα συσκευή…</string>
+    <string name="searching_for_new_device_phone">Αναζήτηση για τη νέα συσκευή…</string>
     <string name="secret_package_title_file">Αρχεία</string>
     <string name="secret_package_title_gallery">Άλμπουμ</string>
     <string name="secret_package_title_note">Σημειώσεις</string>
@@ -753,6 +783,8 @@
     <string name="select_mi_summary">Xiaomi και Redmi</string>
     <string name="select_mi_title">Xiaomi</string>
     <string name="select_old_device_title">Επιλέξτε μοντέλο παλιάς συσκευής</string>
+    <string name="select_old_device_title_pad">Επιλέξτε τύπο παλιάς συσκευής</string>
+    <string name="select_old_device_title_phone">Επιλέξτε τύπο παλιάς συσκευής</string>
     <string name="selected">Επιλέχθηκε</string>
     <string name="send">Αποστολή</string>
     <string name="send_verification_code_fail">Αδυναμία αποστολής κωδικού επαλήθευσης</string>
@@ -842,6 +874,7 @@
     <string name="thursday">Πέμπτη</string>
     <string name="thursday_short">Πεμ</string>
     <string name="thursday_shortest">Πεμ</string>
+    <string name="time">Χρονική περίοδος</string>
     <string name="time_concentrator" />
     <string name="time_picker_dialog_title">Ορισμός χρόνου</string>
     <string name="time_picker_label_hour">Ω</string>
@@ -900,6 +933,8 @@
     <string name="trans_install_guide_new_content_first">"Σαρώστε αυτόν τον κωδικό QR χρησιμοποιώντας τη νέα σας συσκευή.
 Πραγματοποιήστε λήψη και εγκατάσταση της Μεταφοράς Mi."</string>
     <string name="trans_install_guide_old_content_first">Σαρώστε αυτόν τον κωδικό QR με την παλιά σας συσκευή για να κατεβάσετε και να εγκαταστήστε τη Μεταφορά Mi.</string>
+    <string name="trans_install_guide_old_content_first_pad">Σαρώστε αυτόν τον κωδικό QR με την παλιά σας συσκευή για να κατεβάσετε και να εγκαταστήστε τη Μεταφορά Mi.</string>
+    <string name="trans_install_guide_old_content_first_phone">Σαρώστε αυτόν τον κωδικό QR με την παλιά σας συσκευή για να κατεβάσετε και να εγκαταστήστε τη Μεταφορά Mi.</string>
     <string name="trans_install_guide_text">Σάρωση για ενημέρωση της Μεταφοράς Mi</string>
     <string name="trans_intro_title">Συχνές Ερωτήσεις</string>
     <string name="trans_main_activity_tutor_first">Μεταφορά αντικειμένων σε μια νέα συσκευή</string>
