--- a/qcom-sdk36/Greek/main/Mms.apk/res/values-el/strings.xml
+++ b/qcom-sdk36/Greek/main/Mms.apk/res/values-el/strings.xml
@@ -173,13 +173,15 @@
     <string name="button_pre_slide">Προηγούμενο</string>
     <string name="button_resend_message">Αποστολή ξανά</string>
     <string name="button_unfold">Άνοιγμα</string>
+    <string name="calendar_date_picker_a11y_next_month">Αλλαγή στον επόμενο μήνα</string>
+    <string name="calendar_date_picker_a11y_prev_month">Αλλαγή στον προηγούμενο μήνα</string>
     <string name="can_not_send_by_rcs">Αδυναμία χρήσης Μηνυμάτων 5G</string>
     <string name="can_not_view_group_chat_stranger">Δεν είναι δυνατό να προβάλετε τις λεπτομέρειες ξένων.</string>
     <string name="cancel">Ακύρωση</string>
     <string name="cannot_add_slide_anymore">Αδυναμία προσθήκης περισσότερων διαφανειών.</string>
     <string name="cannot_get_details">Αδυναμία απόκτησης πληροφοριών.</string>
     <string name="cannot_resend_audio">Αδυναμία αποστολής ηχογράφησης</string>
-    <string name="cannot_send_location">Εκχωρήστε πρώτα δικαιώματα τοποθεσίας</string>
+    <string name="cannot_send_location">Παραχωρήστε πρώτα άδειες τοποθεσίας</string>
     <string name="cannot_send_message">Αδυναμία αποστολής μηνύματος</string>
     <string name="cannot_send_message_reason">Το μήνυμά σας δεν έχει έγκυρους παραλήπτες.</string>
     <string name="cannot_send_mms">Οι δορυφορικές επικοινωνίες δεν υποστηρίζουν MMS</string>
