--- a/qcom-sdk36/Lithuanian/main/Mms.apk/res/values-lt/strings.xml
+++ b/qcom-sdk36/Lithuanian/main/Mms.apk/res/values-lt/strings.xml
@@ -173,6 +173,8 @@ Pabandykite dar kartą."</string>
     <string name="button_pre_slide">Atgal</string>
     <string name="button_resend_message">Siųsti dar kartą</string>
     <string name="button_unfold">Išskleisti</string>
+    <string name="calendar_date_picker_a11y_next_month">Pakeisti į kitą mėnesį</string>
+    <string name="calendar_date_picker_a11y_prev_month">Pakeisti į ankstesnį mėnesį</string>
     <string name="can_not_send_by_rcs">Nepavyksta naudoti 5G pranešimų</string>
     <string name="can_not_view_group_chat_stranger">Negalima peržiūrėti išsamios informacijos apie svečius.</string>
     <string name="cancel">Atšaukti</string>
