--- a/qcom-sdk36/Portuguese-Brazil/main/Mms.apk/res/values-pt-rBR/strings.xml
+++ b/qcom-sdk36/Portuguese-Brazil/main/Mms.apk/res/values-pt-rBR/strings.xml
@@ -173,6 +173,8 @@ Tente novamente."</string>
     <string name="button_pre_slide">Anterior</string>
     <string name="button_resend_message">Enviar novamente</string>
     <string name="button_unfold">Exibir</string>
+    <string name="calendar_date_picker_a11y_next_month">Alterar para o próximo mês</string>
+    <string name="calendar_date_picker_a11y_prev_month">Alterar para o mês anterior</string>
     <string name="can_not_send_by_rcs">Não é possível usar Mensagens 5G</string>
     <string name="can_not_view_group_chat_stranger">Não é possível ver detalhes de desconhecidos.</string>
     <string name="cancel">Cancelar</string>
