--- a/qcom-sdk36/Romanian/main/MiMover.apk/res/values-ro/strings.xml
+++ b/qcom-sdk36/Romanian/main/MiMover.apk/res/values-ro/strings.xml
@@ -115,6 +115,8 @@
     <string name="clearable_edittext_clear_description">Șterge</string>
     <string name="close">Închide</string>
     <string name="close_cellular_summary">Dispozitivul dvs. utilizează date mobile din cauza restricțiilor de sistem acum. Dezactivați datele mobile și conectați-vă din nou la noul dispozitiv.</string>
+    <string name="close_cellular_summary_pad">Dispozitivul tău folosește acum date mobile din cauza restricțiilor de sistem. Dezactivează datele mobile și conectează-te din nou la noul dispozitiv.</string>
+    <string name="close_cellular_summary_phone">Dispozitivul tău folosește acum date mobile din cauza restricțiilor de sistem. Dezactivează datele mobile și conectează-te din nou la noul dispozitiv.</string>
     <string name="close_cellular_title">Nu s-a putut conecta</string>
     <string name="close_twice_auth_btn">Opriți autentificarea doi factori</string>
     <string name="close_twice_auth_note">"Notă:
@@ -301,6 +303,8 @@ Vizitați https://appleid.apple.com/#!&amp;page=signin pentru a opri"</string>
     <string name="guest_connect_dialog_ensure_text">Conectează</string>
     <string name="guest_connect_dialog_fail_message">Nu s-a putut conecta. Încercați din nou.</string>
     <string name="guest_hint_connect_new_device">Selectează un dispozitiv nou</string>
+    <string name="guest_hint_connect_new_device_pad">Selectați un dispozitiv nou</string>
+    <string name="guest_hint_connect_new_device_phone">Selectați un dispozitiv nou</string>
     <string name="guest_install_app_hint_ensure">Descarcă</string>
     <string name="guest_install_app_hint_summary">Noua versiune de Mi Mover nu este compatibilă cu cea instalată pe acest dispozitiv. Descărcați și instalați noua versiune.</string>
     <string name="guest_install_app_hint_title">Descărcați noua versiune a lui Mi Mover</string>
@@ -374,6 +378,8 @@ Vizitați https://appleid.apple.com/#!&amp;page=signin pentru a opri"</string>
 %2$d. Apropiați cele două dispozitive."</string>
     <string name="install_app_new_title">Scanați codul QR pentru a instala pe dispozitivul nou</string>
     <string name="install_app_old_title">Scanați codul QR pentru a instala pe dispozitivul vechi</string>
+    <string name="install_app_old_title_pad">Scanați codul QR pentru a instala Mi Mover pe dispozitivul vechi</string>
+    <string name="install_app_old_title_phone">Scanați codul QR pentru a instala Mi Mover pe dispozitivul vechi</string>
     <string name="install_app_to_another_phone_content">Instalați Mi Mover pe dispozitivul nou</string>
     <string name="install_app_to_another_phone_content_global">Instalează Mi Mover</string>
     <string name="install_button">Instalează</string>
@@ -512,24 +518,44 @@ Vizitați https://appleid.apple.com/#!&amp;page=signin pentru a opri"</string>
     <string name="new_app_name">Versiune nouă</string>
     <string name="new_main_activity_label">Mi Mover</string>
     <string name="new_trans_intro_desc_2">Nu este nevoie să introduceți parola în noua versiune a lui Mi Mover. Trebuie doar să deschideți Mi Mover pe dispozitivul dvs. vechi, atingeți \"Sunt expeditor\" și atingeți numele la hotspot pentru a vă conecta.</string>
+    <string name="new_trans_intro_desc_2_pad">Nu este nevoie să introduci parola hotspotului în noua versiune de Mi Mover. Pur și simplu deschide Mi Mover pe vechiul dispozitiv, atinge \"Sunt un expeditor\" și atinge numele hotspotului pentru a te conecta.</string>
+    <string name="new_trans_intro_desc_2_phone">Nu este nevoie să introduci parola hotspotului în noua versiune de Mi Mover. Pur și simplu deschide Mi Mover pe vechiul dispozitiv, atinge \"Sunt un expeditor\" și atinge numele hotspotului pentru a te conecta.</string>
     <string name="new_trans_intro_desc_3">Mi Mover are nevoie de spațiu de stocare pentru a crea un pachet de transfer pe dispozitivul vechi înainte de a trimite pe noul dispozitiv. Eliberați spațiul de stocare pentru a putea continua.</string>
     <string name="new_trans_intro_desc_4">S-ar putea să existe probleme de compatibilitate a versiunii de la dispozitiv, sistem și versiunea aplicației care împiedică transferul cu succes al anumitor aplicații.</string>
     <string name="new_trans_intro_desc_5">Unele aplicații (de exemplu: Servicii financiare și instrumente de plată) nu permit transferul de parole din motive de securitate.</string>
     <string name="new_trans_intro_desc_6">Este posibil ca noul dvs. telefon Mi să nu aibă permisiunile necesare pentru a face acest lucru.</string>
+    <string name="new_trans_intro_desc_6_pad">Datele aplicației nu pot fi transferate deoarece Mi Mover nu are permisiunile necesare pe dispozitivele non-Xiaomi.</string>
+    <string name="new_trans_intro_desc_6_phone">Datele aplicației nu pot fi transferate deoarece Mi Mover nu are permisiunile necesare pe dispozitivele non-Xiaomi.</string>
     <string name="new_trans_intro_desc_7">Mi Mover va putea să continue de unde ați întrerupt. Cu toate acestea, poate fi necesar să începeți din nou dacă problemele de compatibilitate ale dispozitivului vă împiedică să reluați transferul întrerupt.</string>
     <string name="new_trans_intro_desc_8">Istoricul WeChat de pe dispozitivul vechi va suprascrie istoricul WeChat al noului dispozitiv în timpul transferului.</string>
     <string name="new_trans_intro_desc_new">"%1$d. Asigurați-vă că Mi Mover de pe noul dispozitiv este actualizat. Puteți descărca cea mai recentă versiune de Mi Mover din Magazin Play sau atingeți aici: %2$s.
 %3$d. Dacă hotspot-ul tot nu va apărea în Mi Mover, deschideți setările Wi-Fi și verificați dacă îl puteți vedea acolo. Dacă da, reveniți la Mi Mover și atingeți numele hotspot-ului."</string>
     <string name="new_trans_intro_desc_new_click">Descarcă</string>
+    <string name="new_trans_intro_desc_new_pad">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Asigurați-vă că aplicația Mi Mover de pe dispozitivul dvs. nou este actualizată. Puteți descărca cea mai recentă versiune a aplicației Mi Mover din GetApps sau <Data>&lt;a href=%2$s>puteți apăsa aici&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Dacă hotspot-ul nu va apărea în Mi Mover în continuare, deschideți setările Wi-Fi și verificați dacă îl puteți vedea acolo. Dacă da, reveniți la Mi Mover și apăsați pe numele hotspot-ului."</string>
+    <string name="new_trans_intro_desc_new_pad_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Asigurați-vă că aplicația Mi Mover de pe dispozitivul dvs. nou este actualizată. Puteți descărca cea mai recentă versiune a aplicației Mi Mover din GetApps sau <Data>&lt;a href=%2$s>puteți apăsa aici&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Dacă hotspot-ul nu va apărea în Mi Mover în continuare, deschideți setările WLAN și verificați dacă îl puteți vedea acolo. Dacă da, reveniți la Mi Mover și apăsați pe numele hotspot-ului."</string>
+    <string name="new_trans_intro_desc_new_phone">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Asigurați-vă că aplicația Mi Mover de pe dispozitivul dvs. nou este actualizată. Puteți descărca cea mai recentă versiune a aplicației Mi Mover din GetApps sau <Data>&lt;a href=%2$s>puteți apăsa aici&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Dacă hotspot-ul nu va apărea în Mi Mover în continuare, deschideți setările Wi-Fi și verificați dacă îl puteți vedea acolo. Dacă da, reveniți la Mi Mover și apăsați pe numele hotspot-ului."</string>
+    <string name="new_trans_intro_desc_new_phone_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Asigurați-vă că aplicația Mi Mover de pe dispozitivul dvs. nou este actualizată. Puteți descărca cea mai recentă versiune a aplicației Mi Mover din GetApps sau <Data>&lt;a href=%2$s>puteți apăsa aici&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Dacă hotspot-ul nu va apărea în Mi Mover în continuare, deschideți setările WLAN și verificați dacă îl puteți vedea acolo. Dacă da, reveniți la Mi Mover și apăsați pe numele hotspot-ului."</string>
     <string name="new_trans_intro_desc_old">%d. Dacă hotspotul încă nu va apărea în Mi Mover, deschideți setările Wi-Fi și verificați dacă îl puteți vedea acolo. Dacă da, du-te înapoi la Mi Mover și atinge numele hotspot-ului.</string>
     <string name="new_trans_intro_question_1">%d. De ce nu pot vedea hotspot-ul noului dispozitiv pe cel vechi?</string>
+    <string name="new_trans_intro_question_1_pad">%d. De ce nu pot vedea hotspotul noului dispozitiv pe cel vechi?</string>
+    <string name="new_trans_intro_question_1_phone">%d. De ce nu pot vedea hotspotul noului dispozitiv pe cel vechi?</string>
     <string name="new_trans_intro_question_2">%d. Care este parola hotspotului?</string>
     <string name="new_trans_intro_question_3">%d. De ce se spune că nu există suficient spațiu de stocare pe vechiul dispozitiv?</string>
+    <string name="new_trans_intro_question_3_pad">%d. De ce scrie că nu este suficient spațiu de stocare pe vechiul dispozitiv?</string>
+    <string name="new_trans_intro_question_3_phone">%d. De ce scrie că nu este suficient spațiu de stocare pe vechiul dispozitiv?</string>
     <string name="new_trans_intro_question_4">%d. De ce nu toate aplicațiile sunt transferate cu succes?</string>
     <string name="new_trans_intro_question_5">%d. De ce nu sunt transferate parolele unor conturi de aplicații terță parte?</string>
     <string name="new_trans_intro_question_6">%d. De ce datele despre aplicații nu pot fi transferate de pe un dispozitiv terță parte?</string>
+    <string name="new_trans_intro_question_6_pad">%d. De ce nu pot fi transferate datele aplicațiilor de pe un dispozitiv care nu este Xiaomi?</string>
+    <string name="new_trans_intro_question_6_phone">%d. De ce nu pot fi transferate datele aplicațiilor de pe un dispozitiv care nu este Xiaomi?</string>
     <string name="new_trans_intro_question_7">%d. Dacă părăsesc Mi Mover în mijlocul unui transfer, va trebui să o iau de la capăt data viitoare?</string>
     <string name="new_trans_intro_question_8">%d. De ce a dispărut istoricul meu WeChat pe noul dispozitiv?</string>
+    <string name="new_trans_intro_question_8_pad">%d. De ce a dispărut istoricul meu WeChat pe noul dispozitiv?</string>
+    <string name="new_trans_intro_question_8_phone">%d. De ce a dispărut istoricul meu WeChat pe noul dispozitiv?</string>
     <string name="new_version_transfer_downloading">Se actualizează Mi Mover</string>
     <string name="new_version_transfer_downloading_progress">%s</string>
     <string name="new_version_transfer_upgrading">Se actualizează…</string>
@@ -712,6 +738,8 @@ Eliberați cel puțin %s."</string>
     <string name="scanner_quit_alert_btn_negative">Renunț</string>
     <string name="scanner_quit_alert_btn_positive">Nu renunț</string>
     <string name="scanner_quit_alert_message">Va trebui să conectați din nou cele două dispozitive dacă renunțați la Mi Mover acum. Renunțați oricum?</string>
+    <string name="scanner_quit_alert_message_pad">Va trebui să conectați din nou cele două dispozitive dacă închideți Mi Mover acum. Închideți oricum?</string>
+    <string name="scanner_quit_alert_message_phone">Va trebui să conectați din nou cele două dispozitive dacă închideți Mi Mover acum. Închideți oricum?</string>
     <string name="scanner_quit_alert_title">Renunțați acum?</string>
     <string name="scanner_send_dialog_btn">Am înțeles</string>
     <string name="scanner_send_dialog_message">Nu opriți Wi-Fi-ul sau comutați între rețele în timpul transferului.</string>
@@ -723,6 +751,8 @@ Eliberați cel puțin %s."</string>
     <string name="scanner_wechat_overwrite_hit">Datorită restricțiilor pentru aplicațiile terță parte, istoricul de la chat-uri și alte date despre aplicații pe noul dispozitiv vor fi înlocuite cu cele de la cel vechi, după finalizarea transferului.</string>
     <string name="search_menu_title">Căutați</string>
     <string name="searching_for_new_device">Se caută noul dispozitiv…</string>
+    <string name="searching_for_new_device_pad">Se caută noul dispozitiv…</string>
+    <string name="searching_for_new_device_phone">Se caută noul dispozitiv…</string>
     <string name="secret_package_title_file">Fișiere</string>
     <string name="secret_package_title_gallery">Albume</string>
     <string name="secret_package_title_note">Note</string>
@@ -753,6 +783,8 @@ Eliberați cel puțin %s."</string>
     <string name="select_mi_summary">Xiaomi și Redmi</string>
     <string name="select_mi_title">Xiaomi</string>
     <string name="select_old_device_title">Selectează modelul vechi de dispozitiv</string>
+    <string name="select_old_device_title_pad">Selectați tipul vechi de dispozitiv</string>
+    <string name="select_old_device_title_phone">Selectați tipul vechi de dispozitiv</string>
     <string name="selected">Selectat</string>
     <string name="send">Trimite</string>
     <string name="send_verification_code_fail">Nu s-a putut trimite codul de verificare</string>
@@ -842,6 +874,7 @@ Eliberați cel puțin %s."</string>
     <string name="thursday">Joi</string>
     <string name="thursday_short">Joi</string>
     <string name="thursday_shortest">Joi</string>
+    <string name="time">Perioadă de timp</string>
     <string name="time_concentrator" />
     <string name="time_picker_dialog_title">Setează ora</string>
     <string name="time_picker_label_hour">H</string>
@@ -900,6 +933,8 @@ Eliberați cel puțin %s."</string>
     <string name="trans_install_guide_new_content_first">"Scanează acest cod QR utilizând noul dispozitiv.
 Descarcă și Instalează Mi Mover."</string>
     <string name="trans_install_guide_old_content_first">Scanați acest cod QR cu dispozitivul dvs. vechi pentru a descărca și instala Mi Mover.</string>
+    <string name="trans_install_guide_old_content_first_pad">Scanați acest cod QR cu vechiul dispozitiv pentru a descărca și instala Mi Mover.</string>
+    <string name="trans_install_guide_old_content_first_phone">Scanați acest cod QR cu vechiul dispozitiv pentru a descărca și instala Mi Mover.</string>
     <string name="trans_install_guide_text">Scanează pentru a actualiza Mi Mover</string>
     <string name="trans_intro_title">ÎNTREBĂRI FRECVENTE</string>
     <string name="trans_main_activity_tutor_first">Transferați elemente pe un dispozitiv nou</string>
