--- a/qcom-sdk36/Romanian/main/Mms.apk/res/values-ro/strings.xml
+++ b/qcom-sdk36/Romanian/main/Mms.apk/res/values-ro/strings.xml
@@ -173,6 +173,8 @@ la lista neagră"</string>
     <string name="button_pre_slide">Precedent</string>
     <string name="button_resend_message">Trimite din nou</string>
     <string name="button_unfold">Depliați</string>
+    <string name="calendar_date_picker_a11y_next_month">Treceți la luna următoare</string>
+    <string name="calendar_date_picker_a11y_prev_month">Treceți la luna anterioară</string>
     <string name="can_not_send_by_rcs">Nu se poate utiliza Mesaje 5G</string>
     <string name="can_not_view_group_chat_stranger">Nu se pot vizualiza detaliile de la străini.</string>
     <string name="cancel">Anulează</string>
