--- a/qcom-sdk36/Russian/main/Mms.apk/res/values-ru/strings.xml
+++ b/qcom-sdk36/Russian/main/Mms.apk/res/values-ru/strings.xml
@@ -173,6 +173,8 @@
     <string name="button_pre_slide">Назад</string>
     <string name="button_resend_message">Повторить</string>
     <string name="button_unfold">Развернуть</string>
+    <string name="calendar_date_picker_a11y_next_month">Перейти к следующему месяцу</string>
+    <string name="calendar_date_picker_a11y_prev_month">Перейти к предыдущему месяцу</string>
     <string name="can_not_send_by_rcs">Не удается воспользоваться Сообщениями 5G</string>
     <string name="can_not_view_group_chat_stranger">Нельзя просмотреть сведения о незнакомых.</string>
     <string name="cancel">Отмена</string>
