--- a/qcom-sdk36/Slovak/main/MiMover.apk/res/values-sk/strings.xml
+++ b/qcom-sdk36/Slovak/main/MiMover.apk/res/values-sk/strings.xml
@@ -115,6 +115,8 @@
     <string name="clearable_edittext_clear_description">Vymazať</string>
     <string name="close">Zatvoriť</string>
     <string name="close_cellular_summary">Vaše zariadenie teraz používa mobilné dáta z dôvodu systémových obmedzení. Vypnite mobilné dáta a znova sa pripojte k novému zariadeniu.</string>
+    <string name="close_cellular_summary_pad">Vaše zariadenie teraz používa mobilné dáta z dôvodu systémových obmedzení. Vypnite mobilné dáta a znova sa pripojte k novému zariadeniu.</string>
+    <string name="close_cellular_summary_phone">Vaše zariadenie teraz používa mobilné dáta z dôvodu systémových obmedzení. Vypnite mobilné dáta a znova sa pripojte k novému zariadeniu.</string>
     <string name="close_cellular_title">Nepodarilo sa pripojiť</string>
     <string name="close_twice_auth_btn">Vypnúť dvojstupňové overenie</string>
     <string name="close_twice_auth_note">"Poznámka:
@@ -301,6 +303,8 @@ Otvorte WeChat a prejdite na Moje > Nastavenia > Záloha a migrácia chatov."</s
     <string name="guest_connect_dialog_ensure_text">Pripojiť</string>
     <string name="guest_connect_dialog_fail_message">Nepodarilo sa pripojiť. Skúste to znova.</string>
     <string name="guest_hint_connect_new_device">Vyberte nové zariadenie</string>
+    <string name="guest_hint_connect_new_device_pad">Vyberte nové zariadenie</string>
+    <string name="guest_hint_connect_new_device_phone">Vyberte nové zariadenie</string>
     <string name="guest_install_app_hint_ensure">Stiahnúť</string>
     <string name="guest_install_app_hint_summary">Nová verzia aplikácie Mi Mover nie je kompatibilná s verziou nainštalovanou na tomto zariadení. Stiahnite a nainštalujte si novú verziu.</string>
     <string name="guest_install_app_hint_title">Stiahnúť novú verziu aplikácie Mi Mover</string>
@@ -374,6 +378,8 @@ Otvorte WeChat a prejdite na Moje > Nastavenia > Záloha a migrácia chatov."</s
 %2$d. Priblížte obe zariadenia k sebe."</string>
     <string name="install_app_new_title">Načítajte QR kód pre spustenie inštalácie na novom zariadení</string>
     <string name="install_app_old_title">Načítajte QR kód pre inštaláciu aplikácie Mi Mover na staré zariadenie</string>
+    <string name="install_app_old_title_pad">Načítajte QR kód pre inštaláciu aplikácie Mi Mover na staré zariadenie</string>
+    <string name="install_app_old_title_phone">Načítajte QR kód pre inštaláciu aplikácie Mi Mover na staré zariadenie</string>
     <string name="install_app_to_another_phone_content">Nainštalujte Mi Mover do vášho nového zariadenia</string>
     <string name="install_app_to_another_phone_content_global">Inštalovať Mi Mover</string>
     <string name="install_button">Inštalovať</string>
@@ -512,24 +518,44 @@ Otvorte WeChat a prejdite na Moje > Nastavenia > Záloha a migrácia chatov."</s
     <string name="new_app_name">Nová verzia</string>
     <string name="new_main_activity_label">Mi Mover</string>
     <string name="new_trans_intro_desc_2">Nie je nutné zadávať heslo v novej verzii aplikácie Mi Mover. Jednoducho otvorte aplikáciu Mi Mover na vašom starom zariadení, ťuknite na \"Som odosielateľ\" a ťuknite na názov hotspotu pre pripojenie.</string>
+    <string name="new_trans_intro_desc_2_pad">Nie je nutné zadávať heslo hotspotu v novej verzii aplikácie Mi Mover. Jednoducho otvorte aplikáciu Mi Mover na vašom starom zariadení, ťuknite na \"Som odosielateľ\" a ťuknite na názov hotspotu pre pripojenie.</string>
+    <string name="new_trans_intro_desc_2_phone">Nie je nutné zadávať heslo hotspotu v novej verzii aplikácie Mi Mover. Jednoducho otvorte aplikáciu Mi Mover na vašom starom zariadení, ťuknite na \"Som odosielateľ\" a ťuknite na názov hotspotu pre pripojenie.</string>
     <string name="new_trans_intro_desc_3">Aplikácia Mi Mover potrebuje vytvoriť pre prenos na starom zariadení prenosový balík na prenos do nového zariadenia. Pre pokračovanie uvoľnite miesto na úložisku.</string>
     <string name="new_trans_intro_desc_4">Zabrániť úspešnému prenosu môžu problémy so zariadením, systémom alebo kompatibilitou systému.</string>
     <string name="new_trans_intro_desc_5">Niektoré aplikácie (napr. finančné služby alebo nástroje na platenie) nedovoľujú prenos hesiel z bezpečnostných dôvodov.</string>
     <string name="new_trans_intro_desc_6">Vaše nové Xiaomi zariadenie na to nemusí mať povolenia.</string>
+    <string name="new_trans_intro_desc_6_pad">Dáta aplikácie nie je možné preniesť, pretože Mi Mover nemá potrebné povolenia na zariadeniach, ktoré nie sú od spoločnosti Xiaomi.</string>
+    <string name="new_trans_intro_desc_6_phone">Dáta aplikácie nie je možné preniesť, pretože Mi Mover nemá potrebné povolenia na zariadeniach, ktoré nie sú od spoločnosti Xiaomi.</string>
     <string name="new_trans_intro_desc_7">Aplikácia Mi Mover bude schopná pokračovať na mieste, kde ste naposledy skončili. Avšak v prípade problémov s kompatibilitou bude možno potrebné začať odznovu.</string>
     <string name="new_trans_intro_desc_8">História WeChatu vášho starého zariadenia prepíše počas prenosu históriu WeChatu na novom zariadení.</string>
     <string name="new_trans_intro_desc_new">"%1$d. Uistite sa, že Mi Mover na vašom novom zariadení je aktuálny. Najnovšiu verziu aplikácie Mi Mover si môžete stiahnuť v Obchode Play alebo ťuknúť sem: %2$s.
 %3$d. Ak sa prístupový bod stále nezobrazuje v aplikácii Mi Mover, otvorte nastavenia Wi-Fi a skontrolujte, či sa zobrazuje tam. Ak áno, vráťte sa späť do aplikácie Mi Mover a ťuknite na názov prístupového bodu."</string>
     <string name="new_trans_intro_desc_new_click">Stiahnuť</string>
+    <string name="new_trans_intro_desc_new_pad">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Uistite sa, že aplikácia Mi Mover vo vašom zariadení je aktuálna. Najnovšiu verziu aplikácie Mi Mover si môžete stiahnuť cez GetApps alebo <Data>&lt;a href=%2$s>ťuknutím sem&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Ak sa vám v aplikácii Mi Mover hotspot naďalej nezobrazí, otvorte nastavenia Wi-Fi a skontrolujte, či ho uvidíte tam. Ak áno, vráťte sa do aplikácie Mi Mover a ťuknite na názov hotspotu."</string>
+    <string name="new_trans_intro_desc_new_pad_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Uistite sa, že aplikácia Mi Mover vo vašom zariadení je aktuálna. Najnovšiu verziu aplikácie Mi Mover si môžete stiahnuť cez GetApps alebo <Data>&lt;a href=%2$s>ťuknutí sem&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Ak sa vám v aplikácii Mi Mover hotspot naďalej nezobrazí, otvorte nastavenia WLAN a skontrolujte, či ho uvidíte tam. Ak áno, vráťte sa do aplikácie Mi Mover a ťuknite na názov hotspotu."</string>
+    <string name="new_trans_intro_desc_new_phone">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Uistite sa, že aplikácia Mi Mover vo vašom zariadení je aktuálna. Najnovšiu verziu aplikácie Mi Mover si môžete stiahnuť cez GetApps alebo <Data>&lt;a href=%2$s>ťuknutím sem&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Ak sa vám v aplikácii Mi Mover hotspot naďalej nezobrazí, otvorte nastavenia Wi-Fi a skontrolujte, či ho uvidíte tam. Ak áno, vráťte sa do aplikácie Mi Mover a ťuknite na názov hotspotu."</string>
+    <string name="new_trans_intro_desc_new_phone_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Uistite sa, že aplikácia Mi Mover vo vašom zariadení je aktuálna. Najnovšiu verziu aplikácie Mi Mover si môžete stiahnuť cez GetApps alebo <Data>&lt;a href=%2$s>ťuknutí sem&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Ak sa vám v aplikácii Mi Mover hotspot naďalej nezobrazí, otvorte nastavenia WLAN a skontrolujte, či ho uvidíte tam. Ak áno, vráťte sa do aplikácie Mi Mover a ťuknite na názov hotspotu."</string>
     <string name="new_trans_intro_desc_old">%d. Ak sa hotspot v aplikácii Mi Mover stále nezobrazuje, otvorte nastavenia Wi-Fi a skontrolujte, či ho tam vidíte. Ak je to tak, vráťte sa do aplikácie Mi Mover a ťuknite na názov hotspotu.</string>
     <string name="new_trans_intro_question_1">%d. Prečo nevidím na starom zariadení hotspot nového zariadenia?</string>
+    <string name="new_trans_intro_question_1_pad">%d. Prečo nevidím na starom zariadení hotspot nového zariadenia?</string>
+    <string name="new_trans_intro_question_1_phone">%d. Prečo nevidím na starom zariadení hotspot nového zariadenia?</string>
     <string name="new_trans_intro_question_2">%d. Aké je heslo hotspotu?</string>
     <string name="new_trans_intro_question_3">%d. Prečo dostávam hlášku, že na starom zariadení nie je dostatok úložného priestoru?</string>
+    <string name="new_trans_intro_question_3_pad">%d. Prečo dostávam hlášku, že na starom zariadení nie je dostatok úložného priestoru?</string>
+    <string name="new_trans_intro_question_3_phone">%d. Prečo dostávam hlášku, že na starom zariadení nie je dostatok úložného priestoru?</string>
     <string name="new_trans_intro_question_4">%d. Prečo sa všetky aplikácie nepreniesli úspešne?</string>
     <string name="new_trans_intro_question_5">%d. Prečo sa heslá a niektoré aplikácie tretích strán nepreniesli úspešne?</string>
     <string name="new_trans_intro_question_6">%d. Prečo nie je možné prenášať údaje aplikácií zo zariadenia tretej strany?</string>
+    <string name="new_trans_intro_question_6_pad">%d. Prečo nie je možné preniesť údaje z aplikácie zo zariadenia, ktoré nie je od spoločnosti Xiaomi?</string>
+    <string name="new_trans_intro_question_6_phone">%d. Prečo nie je možné preniesť údaje z aplikácie zo zariadenia, ktoré nie je od spoločnosti Xiaomi?</string>
     <string name="new_trans_intro_question_7">%d. Ak opustím aplikáciu Mi Mover uprostred prenosu, budem musieť nabudúce začať odznova?</string>
     <string name="new_trans_intro_question_8">%d. Prečo moja história z aplikácie WeChat zmizla na novom zariadení?</string>
+    <string name="new_trans_intro_question_8_pad">%d. Prečo moja história z aplikácie WeChat zmizla na novom zariadení?</string>
+    <string name="new_trans_intro_question_8_phone">%d. Prečo moja história z aplikácie WeChat zmizla na novom zariadení?</string>
     <string name="new_version_transfer_downloading">Aktualizácia aplikácie Mi Mover</string>
     <string name="new_version_transfer_downloading_progress">%s</string>
     <string name="new_version_transfer_upgrading">Aktualizácia…</string>
@@ -712,6 +738,8 @@ Uvoľnite aspoň %s."</string>
     <string name="scanner_quit_alert_btn_negative">Ukončiť</string>
     <string name="scanner_quit_alert_btn_positive">Neukončiť</string>
     <string name="scanner_quit_alert_message">Ak teraz ukončíte Mi Mover budete musieť opäť pripojiť 2 zariadenia. Ukončiť napriek tomu?</string>
+    <string name="scanner_quit_alert_message_pad">Ak teraz ukončíte Mi Mover, budete musieť opäť pripojiť 2 zariadenia. Ukončiť napriek tomu?</string>
+    <string name="scanner_quit_alert_message_phone">Ak teraz ukončíte Mi Mover, budete musieť opäť pripojiť 2 zariadenia. Ukončiť napriek tomu?</string>
     <string name="scanner_quit_alert_title">Ukončiť teraz?</string>
     <string name="scanner_send_dialog_btn">Rozumiem</string>
     <string name="scanner_send_dialog_message">Počas prenosu nevypínajte Wi-Fi alebo neprepínajte medzi sieťami.</string>
@@ -723,6 +751,8 @@ Uvoľnite aspoň %s."</string>
     <string name="scanner_wechat_overwrite_hit">Z dôvodu obmedzení aplikácií, histórie chatov a iných údajov aplikácií, budú po dokončení prenosu údaje na vašom novom zariadení nahradené údajmi zo starého zariadenia.</string>
     <string name="search_menu_title">Hľadať</string>
     <string name="searching_for_new_device">Vyhľadáva sa nové zariadenie…</string>
+    <string name="searching_for_new_device_pad">Vyhľadáva sa nové zariadenie…</string>
+    <string name="searching_for_new_device_phone">Vyhľadáva sa nové zariadenie…</string>
     <string name="secret_package_title_file">Súbory</string>
     <string name="secret_package_title_gallery">Albumy</string>
     <string name="secret_package_title_note">Poznámky</string>
@@ -753,6 +783,8 @@ Uvoľnite aspoň %s."</string>
     <string name="select_mi_summary">Xiaomi a Redmi</string>
     <string name="select_mi_title">Xiaomi</string>
     <string name="select_old_device_title">Vyberte model starého zariadenia</string>
+    <string name="select_old_device_title_pad">Vyberte starý typ zariadenia</string>
+    <string name="select_old_device_title_phone">Vyberte starý typ zariadenia</string>
     <string name="selected">Vybrané</string>
     <string name="send">Odoslať</string>
     <string name="send_verification_code_fail">Nepodarilo sa odoslať overovací kód</string>
@@ -842,6 +874,7 @@ Uvoľnite aspoň %s."</string>
     <string name="thursday">Štvrtok</string>
     <string name="thursday_short">Štv</string>
     <string name="thursday_shortest">Štv</string>
+    <string name="time">Časové obdobie</string>
     <string name="time_concentrator" />
     <string name="time_picker_dialog_title">Nastaviť čas</string>
     <string name="time_picker_label_hour">H</string>
@@ -900,6 +933,8 @@ Uvoľnite aspoň %s."</string>
     <string name="trans_install_guide_new_content_first">"Načítajte tento QR kód s vaším novým zariadením.
 Stiahnite a nainštalujte si aplikáciu Mi Mover."</string>
     <string name="trans_install_guide_old_content_first">Pre stiahnutie a nainštalovanie aplikácie Mi Mover naskenujte QR kód s vašim starým zariadením.</string>
+    <string name="trans_install_guide_old_content_first_pad">Pre stiahnutie a nainštalovanie aplikácie Mi Mover naskenujte QR kód s vašim starým zariadením.</string>
+    <string name="trans_install_guide_old_content_first_phone">Pre stiahnutie a nainštalovanie aplikácie Mi Mover naskenujte QR kód s vašim starým zariadením.</string>
     <string name="trans_install_guide_text">Aktualizovať Mi Mover pomocou načítania kódu</string>
     <string name="trans_intro_title">Časté otázky</string>
     <string name="trans_main_activity_tutor_first">Prenos položiek do nového zariadenia</string>
