--- a/qcom-sdk36/Spanish/main/MiMover.apk/res/values-es-rUS/strings.xml
+++ b/qcom-sdk36/Spanish/main/MiMover.apk/res/values-es-rUS/strings.xml
@@ -115,6 +115,8 @@
     <string name="clearable_edittext_clear_description">Borrar</string>
     <string name="close">Cerrar</string>
     <string name="close_cellular_summary">Ahora su dispositivo está utilizando datos móviles debido a restricciones del sistema. Desactive los datos móviles y vuelva a conectarse al nuevo dispositivo.</string>
+    <string name="close_cellular_summary_pad">Ahora su dispositivo está utilizando datos móviles debido a restricciones del sistema. Desactive los datos móviles y vuelva a conectarse al nuevo dispositivo.</string>
+    <string name="close_cellular_summary_phone">Ahora su dispositivo está utilizando datos móviles debido a restricciones del sistema. Desactive los datos móviles y vuelva a conectarse al nuevo dispositivo.</string>
     <string name="close_cellular_title">No se pudo conectar</string>
     <string name="close_twice_auth_btn">Desactivar autenticación de dos factores</string>
     <string name="close_twice_auth_note">"Nota:
@@ -301,6 +303,8 @@ Abra WeChat y vaya a Yo > Ajustes > General > Copia de seguridad &amp;migrar cha
     <string name="guest_connect_dialog_ensure_text">Conectar</string>
     <string name="guest_connect_dialog_fail_message">No se pudo conectar. Vuelva a intentarlo.</string>
     <string name="guest_hint_connect_new_device">Seleccionar dispositivo nuevo</string>
+    <string name="guest_hint_connect_new_device_pad">Seleccionar dispositivo nuevo</string>
+    <string name="guest_hint_connect_new_device_phone">Seleccionar dispositivo nuevo</string>
     <string name="guest_install_app_hint_ensure">Descargar</string>
     <string name="guest_install_app_hint_summary">La nueva versión de Mi Mudanza no es compatible con la instalada en este dispositivo. Descargue e instale la nueva versión.</string>
     <string name="guest_install_app_hint_title">Descargar la nueva versión de Mi Mudanza</string>
@@ -374,6 +378,8 @@ Abra WeChat y vaya a Yo > Ajustes > General > Copia de seguridad &amp;migrar cha
 %2$d. Acerque los dos dispositivos."</string>
     <string name="install_app_new_title">Escanee el código QR para instalar Mi Mudanza en el dispositivo nuevo</string>
     <string name="install_app_old_title">Escanee el código QR para instalar Mi Mudanza en el dispositivo antiguo</string>
+    <string name="install_app_old_title_pad">Escanee el código QR para instalar Mi Mudanza en el dispositivo antiguo</string>
+    <string name="install_app_old_title_phone">Escanee el código QR para instalar Mi Mudanza en el dispositivo antiguo</string>
     <string name="install_app_to_another_phone_content">Instale Mi Mudanza en su dispositivo nuevo</string>
     <string name="install_app_to_another_phone_content_global">Instalar Mi Mudanza</string>
     <string name="install_button">Instalar</string>
@@ -512,24 +518,44 @@ Abra WeChat y vaya a Yo > Ajustes > General > Copia de seguridad &amp;migrar cha
     <string name="new_app_name">Nueva versión</string>
     <string name="new_main_activity_label">Mi Mudanza</string>
     <string name="new_trans_intro_desc_2">No es necesario ingresar una contraseña en la nueva versión de Mi Mudanza. Simplemente abra Mi Mudanza en su antiguo dispositivo, toque \"Soy un remitente\" y toque el nombre del hotspot para conectarse.</string>
+    <string name="new_trans_intro_desc_2_pad">No es necesario ingresar la contraseña del punto de acceso en la nueva versión de Mi Mudanza. Simplemente abra Mi Mudanza en su antiguo dispositivo, toque \"Soy un remitente\" y toque el nombre del punto de acceso para conectarse.</string>
+    <string name="new_trans_intro_desc_2_phone">No es necesario ingresar la contraseña del punto de acceso en la nueva versión de Mi Mudanza. Simplemente abra Mi Mudanza en su antiguo dispositivo, toque \"Soy un remitente\" y toque el nombre del punto de acceso para conectarse.</string>
     <string name="new_trans_intro_desc_3">Mi Mudanza necesita espacio de almacenamiento para crear un paquete de transferencia en su antiguo dispositivo antes de enviarlo al nuevo. Libere espacio de almacenamiento para poder continuar.</string>
     <string name="new_trans_intro_desc_4">Es posible que existan problemas de compatibilidad con la versión del dispositivo, el sistema y la aplicación que impiden que algunas aplicaciones se transfieran correctamente.</string>
     <string name="new_trans_intro_desc_5">Algunas aplicaciones (por ejemplo, servicios financieros y herramientas de pago) no permiten transferir contraseñas por razones de seguridad.</string>
     <string name="new_trans_intro_desc_6">Es posible que su nuevo teléfono Mi no tenga los permisos necesarios para hacerlo.</string>
+    <string name="new_trans_intro_desc_6_pad">Los datos de la aplicación no se pueden transferir porque Mi Mudanza no tiene los permisos necesarios en dispositivos que no son Xiaomi.</string>
+    <string name="new_trans_intro_desc_6_phone">Los datos de la aplicación no se pueden transferir porque Mi Mudanza no tiene los permisos necesarios en dispositivos que no son Xiaomi.</string>
     <string name="new_trans_intro_desc_7">Mi Mudanza podrá retomar desde donde lo dejó. Sin embargo, es posible que deba comenzar de nuevo si los problemas de compatibilidad del dispositivo le impiden reanudar la transferencia interrumpida.</string>
     <string name="new_trans_intro_desc_8">El historial de WeChat de su dispositivo antiguo sobrescribirá el historial de WeChat en su nuevo dispositivo durante la transferencia.</string>
     <string name="new_trans_intro_desc_new">"%1$d. Asegúrese de que Mi Mudanza esté actualizado en su nuevo dispositivo. Puede descargar la última versión de Mi Mudanza en la Play Store o pulsar aquí: %2$s.
 %3$d. Si el hotspot aún no aparece en Mi Mover, abra los ajustes de Wi-Fi y compruebe si puede verlo allí. Si es así, regrese a Mi Mudanza y pulse sobre el nombre del hotspot."</string>
     <string name="new_trans_intro_desc_new_click">Descargar</string>
+    <string name="new_trans_intro_desc_new_pad">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Asegúrese de que Mi Mover en su nuevo dispositivo esté actualizado. Puede descargar la versión más reciente de Mi Mover en GetApps o <Data>&lt;a href=%2$s>hacer clic aquí&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Si el punto de acceso aún no aparece en Mi Mover, abra la configuración de Wi-Fi y compruebe si puede visualizarlo allí. En caso afirmativo, regrese a Mi Mover y toque el nombre del punto de acceso."</string>
+    <string name="new_trans_intro_desc_new_pad_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Asegúrese de que Mi Mover en su nuevo dispositivo esté actualizado. Puede descargar la versión más reciente de Mi Mover en GetApps o <Data>&lt;a href=%2$s>hacer clic aquí&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Si el punto de acceso aún no aparece en Mi Mover, abra la configuración de WLAN y compruebe si puede visualizarlo allí. En caso afirmativo, regrese a Mi Mover y toque el nombre del punto de acceso."</string>
+    <string name="new_trans_intro_desc_new_phone">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Asegúrese de que Mi Mover en su nuevo dispositivo esté actualizado. Puede descargar la versión más reciente de Mi Mover en GetApps o <Data>&lt;a href=%2$s>hacer clic aquí&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Si el punto de acceso aún no aparece en Mi Mover, abra la configuración de Wi-Fi y compruebe si puede visualizarlo allí. En caso afirmativo, regrese a Mi Mover y toque el nombre del punto de acceso."</string>
+    <string name="new_trans_intro_desc_new_phone_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Asegúrese de que Mi Mover en su nuevo dispositivo esté actualizado. Puede descargar la versión más reciente de Mi Mover en GetApps o <Data>&lt;a href=%2$s>hacer clic aquí&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Si el punto de acceso aún no aparece en Mi Mover, abra la configuración de WLAN y compruebe si puede visualizarlo allí. En caso afirmativo, regrese a Mi Mover y toque el nombre del punto de acceso."</string>
     <string name="new_trans_intro_desc_old">%d. Si el hotspot aún no aparece en Mi Mudanza, abra los ajustes del Wi-Fi y verifique si puede verlo allí. Si es así, vaya a Mi Mudanza y toque el nombre del hotspot.</string>
     <string name="new_trans_intro_question_1">%d. ¿Por qué no puedo ver el punto de acceso del nuevo dispositivo en el anterior?</string>
+    <string name="new_trans_intro_question_1_pad">%d. ¿Por qué no puedo ver el punto de acceso del nuevo dispositivo en el anterior?</string>
+    <string name="new_trans_intro_question_1_phone">%d. ¿Por qué no puedo ver el punto de acceso del nuevo dispositivo en el anterior?</string>
     <string name="new_trans_intro_question_2">%d. ¿Cuál es la contraseña del punto de acceso?</string>
     <string name="new_trans_intro_question_3">%d. ¿Por qué dice que no hay suficiente espacio de almacenamiento en el dispositivo anterior?</string>
+    <string name="new_trans_intro_question_3_pad">%d. ¿Por qué dice que no hay suficiente espacio de almacenamiento en el dispositivo anterior?</string>
+    <string name="new_trans_intro_question_3_phone">%d. ¿Por qué dice que no hay suficiente espacio de almacenamiento en el dispositivo anterior?</string>
     <string name="new_trans_intro_question_4">%d. ¿Por qué no se transfieren correctamente todas las aplicaciones?</string>
     <string name="new_trans_intro_question_5">%d. ¿Por qué no se transfieren correctamente las contraseñas de algunas cuentas de aplicaciones de terceros?</string>
     <string name="new_trans_intro_question_6">%d. ¿Por qué no se pueden transferir los datos de la aplicación desde un dispositivo de terceros?</string>
+    <string name="new_trans_intro_question_6_pad">%d. ¿Por qué no se pueden transferir los datos de la aplicación desde un dispositivo que no es de Xiaomi?</string>
+    <string name="new_trans_intro_question_6_phone">%d. ¿Por qué no se pueden transferir los datos de la aplicación desde un dispositivo que no es de Xiaomi?</string>
     <string name="new_trans_intro_question_7">%d. Si dejo Mi Mudanza en medio de una transferencia, ¿tendré que empezar de nuevo la próxima vez?</string>
     <string name="new_trans_intro_question_8">%d. ¿Por qué desapareció mi historial de WeChat en el nuevo dispositivo?</string>
+    <string name="new_trans_intro_question_8_pad">%d. ¿Por qué desapareció mi historial de WeChat en el nuevo dispositivo?</string>
+    <string name="new_trans_intro_question_8_phone">%d. ¿Por qué desapareció mi historial de WeChat en el nuevo dispositivo?</string>
     <string name="new_version_transfer_downloading">Actualizando Mi Mover</string>
     <string name="new_version_transfer_downloading_progress">%s</string>
     <string name="new_version_transfer_upgrading">Actualizando…</string>
@@ -712,6 +738,8 @@ Libere al menos %s."</string>
     <string name="scanner_quit_alert_btn_negative">Salir</string>
     <string name="scanner_quit_alert_btn_positive">Continuar</string>
     <string name="scanner_quit_alert_message">Tendrá que volver a conectar ambos dispositivos si sale de Mi Mudanza. ¿Salir?</string>
+    <string name="scanner_quit_alert_message_pad">Tendrá que volver a conectar ambos dispositivos si sale de Mi Mudanza. ¿Salir?</string>
+    <string name="scanner_quit_alert_message_phone">Tendrá que volver a conectar ambos dispositivos si sale de Mi Mudanza. ¿Salir?</string>
     <string name="scanner_quit_alert_title">¿Salir?</string>
     <string name="scanner_send_dialog_btn">Entendido</string>
     <string name="scanner_send_dialog_message">No desactive el Wi-Fi o cambie la red durante la transferencia.</string>
@@ -723,6 +751,8 @@ Libere al menos %s."</string>
     <string name="scanner_wechat_overwrite_hit">Debido a restricciones de aplicaciones de terceros, el historial de conversaciones y otros datos de aplicaciones en su nuevo dispositivo serán reemplazados por los del dispositivo antiguo una vez que la transferencia se haya completado.</string>
     <string name="search_menu_title">Buscar</string>
     <string name="searching_for_new_device">Buscando nuevo dispositivo…</string>
+    <string name="searching_for_new_device_pad">Buscando el nuevo dispositivo…</string>
+    <string name="searching_for_new_device_phone">Buscando el nuevo dispositivo…</string>
     <string name="secret_package_title_file">Archivos</string>
     <string name="secret_package_title_gallery">Álbumes</string>
     <string name="secret_package_title_note">Notas</string>
@@ -753,6 +783,8 @@ Libere al menos %s."</string>
     <string name="select_mi_summary">Xiaomi y Redmi</string>
     <string name="select_mi_title">Xiaomi</string>
     <string name="select_old_device_title">Seleccione el modelo de dispositivo antiguo</string>
+    <string name="select_old_device_title_pad">Seleccione el tipo del dispositivo antiguo</string>
+    <string name="select_old_device_title_phone">Seleccione el tipo del dispositivo antiguo</string>
     <string name="selected">Seleccionados</string>
     <string name="send">Enviar</string>
     <string name="send_verification_code_fail">No se pudo enviar el código de verificación</string>
@@ -842,6 +874,7 @@ Libere al menos %s."</string>
     <string name="thursday">Jueves</string>
     <string name="thursday_short">Jue</string>
     <string name="thursday_shortest">Jue</string>
+    <string name="time">Periodo de tiempo</string>
     <string name="time_concentrator" />
     <string name="time_picker_dialog_title">Ajustar hora</string>
     <string name="time_picker_label_hour">H</string>
@@ -900,6 +933,8 @@ Libere al menos %s."</string>
     <string name="trans_install_guide_new_content_first">"Escanee este código QR con su nuevo dispositivo.
 Descargue e instale Mi Mudanza."</string>
     <string name="trans_install_guide_old_content_first">Escanee este código QR con su dispositivo antiguo para descargar e instalar Mi Mudanza.</string>
+    <string name="trans_install_guide_old_content_first_pad">Escanee este código QR con su dispositivo antiguo para descargar e instalar Mi Mudanza.</string>
+    <string name="trans_install_guide_old_content_first_phone">Escanee este código QR con su dispositivo antiguo para descargar e instalar Mi Mudanza.</string>
     <string name="trans_install_guide_text">Escanear para actualizar Mi Mudanza</string>
     <string name="trans_intro_title">Preguntas frecuentes</string>
     <string name="trans_main_activity_tutor_first">Transferir elementos a un nuevo dispositivo</string>
