--- a/qcom-sdk36/Swedish/main/MiMover.apk/res/values-sv/strings.xml
+++ b/qcom-sdk36/Swedish/main/MiMover.apk/res/values-sv/strings.xml
@@ -115,6 +115,8 @@
     <string name="clearable_edittext_clear_description">Rensa</string>
     <string name="close">Stäng</string>
     <string name="close_cellular_summary">Din enhet använder mobildata på grund av systembegränsningar nu. Stäng av mobildata och anslut till den nya enheten igen.</string>
+    <string name="close_cellular_summary_pad">Din enhet använder mobildata på grund av systembegränsningar nu. Stäng av mobildata och anslut till den nya enheten igen.</string>
+    <string name="close_cellular_summary_phone">Din enhet använder mobildata på grund av systembegränsningar nu. Stäng av mobildata och anslut till den nya enheten igen.</string>
     <string name="close_cellular_title">Det gick inte att ansluta</string>
     <string name="close_twice_auth_btn">Avaktivera tvåstegsverifiering</string>
     <string name="close_twice_auth_note">"Notera:
@@ -301,6 +303,8 @@ Besök https://appleid.apple.com/#!&amp;page=signin för att avaktivera"</string
     <string name="guest_connect_dialog_ensure_text">Anslut</string>
     <string name="guest_connect_dialog_fail_message">Det gick inte att ansluta. Försök igen.</string>
     <string name="guest_hint_connect_new_device">Välj ny enhet</string>
+    <string name="guest_hint_connect_new_device_pad">Välj ny enhet</string>
+    <string name="guest_hint_connect_new_device_phone">Välj ny enhet</string>
     <string name="guest_install_app_hint_ensure">Ladda ner</string>
     <string name="guest_install_app_hint_summary">Den nya versionen av Mi Mover är inte kompatibel med den som är installerad på den här enheten. Ladda ner och installera den nya versionen.</string>
     <string name="guest_install_app_hint_title">Ladda ner den nya versionen av Mi Mover</string>
@@ -374,6 +378,8 @@ Besök https://appleid.apple.com/#!&amp;page=signin för att avaktivera"</string
 %2$d. Placera de två enheterna nära varandra."</string>
     <string name="install_app_new_title">Skanna QR-kod för att installera på den nya enheten</string>
     <string name="install_app_old_title">Skanna QR-kod för att installera på den gamla enheten</string>
+    <string name="install_app_old_title_pad">Skanna QR-kod för att installera på den gamla enheten</string>
+    <string name="install_app_old_title_phone">Skanna QR-kod för att installera på den gamla enheten</string>
     <string name="install_app_to_another_phone_content">Installera Mi Mover på din nya enhet</string>
     <string name="install_app_to_another_phone_content_global">Installera Mi Mover</string>
     <string name="install_button">Installera</string>
@@ -390,7 +396,7 @@ Besök https://appleid.apple.com/#!&amp;page=signin för att avaktivera"</string
     <string name="loading_data">Vänta lite…</string>
     <string name="location_permission_desc">För att hitta enheter i närheten</string>
     <string name="location_permission_request">För anslutning till andra enheter i närheten</string>
-    <string name="lockscreen_access">Pattern area</string>
+    <string name="lockscreen_access">Mönsterområde</string>
     <string name="login">Logga in</string>
     <string name="login_failed">Det gick inte att logga in. Försök igen.</string>
     <string name="logining">Loggar in…</string>
@@ -512,24 +518,44 @@ Besök https://appleid.apple.com/#!&amp;page=signin för att avaktivera"</string
     <string name="new_app_name">Ny version</string>
     <string name="new_main_activity_label">Mi Mover</string>
     <string name="new_trans_intro_desc_2">Du behöver inte ange något lösenord i den nya versionen av Mi Mover. Öppna bara Mi Mover på din gamla enhet, tryck på \"Jag är en avsändare\", och tryck på namnet för surfzonen för att ansluta.</string>
+    <string name="new_trans_intro_desc_2_pad">Du behöver inte ange något lösenord för internetdelning i den nya versionen av Mi Mover. Öppna bara Mi Mover på din gamla enhet, tryck på \"Jag är en avsändare\", och tryck på namnet för surfzonen för att ansluta.</string>
+    <string name="new_trans_intro_desc_2_phone">Du behöver inte ange något lösenord för internetdelning i den nya versionen av Mi Mover. Öppna bara Mi Mover på din gamla enhet, tryck på \"Jag är en avsändare\", och tryck på namnet för surfzonen för att ansluta.</string>
     <string name="new_trans_intro_desc_3">Mi Mover behöver lagringsutrymme för att skapa ett överföringspaket på din gamla enhet innan det skickas till den nya. Frigör lagringsutrymme för att kunna fortsätta.</string>
     <string name="new_trans_intro_desc_4">Det kan finnas kompatibilitetsproblem med enheten, systemet och app-versionen som förhindrar att vissa appar överförs.</string>
     <string name="new_trans_intro_desc_5">Vissa appar (t. ex. finansiella tjänster och betalningsverktyg) tillåter inte överföring av lösenord av säkerhetsskäl.</string>
     <string name="new_trans_intro_desc_6">Din nya Mi-telefon kanske inte har de behörigheter som krävs för att göra det.</string>
+    <string name="new_trans_intro_desc_6_pad">Det går inte att överföra appdata eftersom Mi Mover inte har nödvändig behörighet på enheter som inte är Xiaomi-enheter.</string>
+    <string name="new_trans_intro_desc_6_phone">Det går inte att överföra appdata eftersom Mi Mover inte har nödvändig behörighet på enheter som inte är Xiaomi-enheter.</string>
     <string name="new_trans_intro_desc_7">Mi Mover kommer kunna fortsätta från där du slutade. Men du kan bli tvungen att börja om ingen om kompatibilitetsproblem på enheten förhindrar dig att återuppta den avbrutna överföringen.</string>
     <string name="new_trans_intro_desc_8">WeChat-historik från din gamla enhet kommer skriva över WeChat-historiken på din nya enhet under överföringen.</string>
     <string name="new_trans_intro_desc_new">"%1$d. Kontrollera att den senaste versionen av Mi Mover är installerad på din nya enhet. Du kan ladda ner senaste versionen av Mi Mover i Play-butiken eller trycka här: %2$s.
 %3$d. Om enhetens internetdelning inte visas i Mi Mover, öppna wifi-inställningarna och kolla om du kan se den där. Om du ser den gå tillbaka till Mi Mover och tryck på internetdelningens namn."</string>
     <string name="new_trans_intro_desc_new_click">Ladda ner</string>
+    <string name="new_trans_intro_desc_new_pad">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Kontrollera att den senaste versionen av Mi Mover är installerad på din nya enhet. Du kan ladda ner senaste versionen av Mi Mover i GetApps eller <Data>&lt;a href=%2$s>trycka här&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Om enhetens internetdelning inte visas i Mi Mover, öppna wifi-inställningarna och kolla om du kan se den där. Om du ser den gå tillbaka till Mi Mover och tryck på internetdelningens namn."</string>
+    <string name="new_trans_intro_desc_new_pad_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Kontrollera att den senaste versionen av Mi Mover är installerad på din nya enhet. Du kan ladda ner senaste versionen av Mi Mover i GetApps eller <Data>&lt;a href=%2$s>trycka här&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Om enhetens internetdelning inte visas i Mi Mover, öppna WLAN-inställningarna och kolla om du kan se den där. Om du ser den gå tillbaka till Mi Mover och tryck på internetdelningens namn."</string>
+    <string name="new_trans_intro_desc_new_phone">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Kontrollera att den senaste versionen av Mi Mover är installerad på din nya enhet. Du kan ladda ner senaste versionen av Mi Mover i GetApps eller <Data>&lt;a href=%2$s>trycka här&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Om enhetens internetdelning inte visas i Mi Mover, öppna wifi-inställningarna och kolla om du kan se den där. Om du ser den gå tillbaka till Mi Mover och tryck på internetdelningens namn."</string>
+    <string name="new_trans_intro_desc_new_phone_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Kontrollera att den senaste versionen av Mi Mover är installerad på din nya enhet. Du kan ladda ner senaste versionen av Mi Mover i GetApps eller <Data>&lt;a href=%2$s>trycka här&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Om enhetens internetdelning inte visas i Mi Mover, öppna WLAN-inställningarna och kolla om du kan se den där. Om du ser den gå tillbaka till Mi Mover och tryck på internetdelningens namn."</string>
     <string name="new_trans_intro_desc_old">%d. Om internetdelningen inte visa ändå i Mi Mover, öppna WiFi-inställningarna och kolla om du kan se den där. Om du kan det, gå tillbaka till Mi Mover och tryck på internetdelningens namn.</string>
     <string name="new_trans_intro_question_1">%dVarför kan jag inte se internetdelningen från den nya enheten på den gamla enheten?</string>
+    <string name="new_trans_intro_question_1_pad">%dVarför kan jag inte se internetdelningen från den nya enheten på den gamla enheten?</string>
+    <string name="new_trans_intro_question_1_phone">%dVarför kan jag inte se internetdelningen från den nya enheten på den gamla enheten?</string>
     <string name="new_trans_intro_question_2">%d. Vilket är internetdelningens lösenord?</string>
     <string name="new_trans_intro_question_3">%d. Varför anger den att det inte finns tillräckligt med utrymme på den gamla enheten?</string>
+    <string name="new_trans_intro_question_3_pad">%d. Varför anger den att det inte finns tillräckligt med utrymme på den gamla enheten?</string>
+    <string name="new_trans_intro_question_3_phone">%d. Varför anger den att det inte finns tillräckligt med utrymme på den gamla enheten?</string>
     <string name="new_trans_intro_question_4">%d. Varför flyttas inte alla apparna?</string>
     <string name="new_trans_intro_question_5">%d. Varför är inte lösenorden för vissa tredjepartsapp-konton överförda?</string>
     <string name="new_trans_intro_question_6">%d. Varför kan inte app-information överföras från en tredjeparts enhet?</string>
+    <string name="new_trans_intro_question_6_pad">%d. Varför kan inte app-information överföras från en enhet som inte är en Xiaomi-enhet?</string>
+    <string name="new_trans_intro_question_6_phone">%d. Varför kan inte app-information överföras från en enhet som inte är en Xiaomi-enhet?</string>
     <string name="new_trans_intro_question_7">%d. Om jag lämnar Mi Mover mitt i en överföring, måste jag då börja om nästa gång?</string>
     <string name="new_trans_intro_question_8">%d. Varför försvann min historik från WeChat på den nya enheten?</string>
+    <string name="new_trans_intro_question_8_pad">%d. Varför försvann min historik från WeChat på den nya enheten?</string>
+    <string name="new_trans_intro_question_8_phone">%d. Varför försvann min historik från WeChat på den nya enheten?</string>
     <string name="new_version_transfer_downloading">Uppdaterar Mi Mover</string>
     <string name="new_version_transfer_downloading_progress">%s</string>
     <string name="new_version_transfer_upgrading">Uppdaterar…</string>
@@ -712,6 +738,8 @@ Frigör minst %s."</string>
     <string name="scanner_quit_alert_btn_negative">Avsluta</string>
     <string name="scanner_quit_alert_btn_positive">Avsluta inte</string>
     <string name="scanner_quit_alert_message">Du måste ansluta de tåv enheterna igen om du avslutar Mi Mover nu. Avsluta ändå?</string>
+    <string name="scanner_quit_alert_message_pad">Du måste ansluta de två enheterna igen om du avslutar Mi Mover nu. Avsluta ändå?</string>
+    <string name="scanner_quit_alert_message_phone">Du måste ansluta de två enheterna igen om du avslutar Mi Mover nu. Avsluta ändå?</string>
     <string name="scanner_quit_alert_title">Avsluta nu?</string>
     <string name="scanner_send_dialog_btn">Uppfattat</string>
     <string name="scanner_send_dialog_message">Slå inte av Wi-Fi eller växla inte mellan nätverk under överföringen.</string>
@@ -723,6 +751,8 @@ Frigör minst %s."</string>
     <string name="scanner_wechat_overwrite_hit">På grund av restriktioner i tredjeparts-appar kommer chatt-historik och annan app-data på din nya enhet att ersättas med det från den gamla efter att överföringen är genomförd.</string>
     <string name="search_menu_title">Sök</string>
     <string name="searching_for_new_device">Söker efter den nya enheten…</string>
+    <string name="searching_for_new_device_pad">Söker efter den nya enheten…</string>
+    <string name="searching_for_new_device_phone">Söker efter den nya enheten…</string>
     <string name="secret_package_title_file">Filer</string>
     <string name="secret_package_title_gallery">Album</string>
     <string name="secret_package_title_note">Anteckningar</string>
@@ -753,6 +783,8 @@ Frigör minst %s."</string>
     <string name="select_mi_summary">Xiaomi och Redmi</string>
     <string name="select_mi_title">Xiaomi</string>
     <string name="select_old_device_title">Välj gammal enhetsmodell</string>
+    <string name="select_old_device_title_pad">Välj gammal enhetstyp</string>
+    <string name="select_old_device_title_phone">Välj gammal enhetstyp</string>
     <string name="selected">Valda</string>
     <string name="send">Skicka</string>
     <string name="send_verification_code_fail">Kunde inte skicka verifieringskod</string>
@@ -842,6 +874,7 @@ Frigör minst %s."</string>
     <string name="thursday">Torsdag</string>
     <string name="thursday_short">Tor</string>
     <string name="thursday_shortest">Tor</string>
+    <string name="time">Tidsperiod</string>
     <string name="time_concentrator" />
     <string name="time_picker_dialog_title">Ange tid</string>
     <string name="time_picker_label_hour">H</string>
@@ -900,6 +933,8 @@ Frigör minst %s."</string>
     <string name="trans_install_guide_new_content_first">"Skanna den här QR-koden med hjälp av din nya enhet.
 Ladda ned och installera Mi Mover."</string>
     <string name="trans_install_guide_old_content_first">Skanna den här QR-koden med hjälp av din gamla enhet, för att ladda ned och installera Mi Mover.</string>
+    <string name="trans_install_guide_old_content_first_pad">Skanna den här QR-koden med hjälp av din gamla enhet, för att ladda ned och installera Mi Mover.</string>
+    <string name="trans_install_guide_old_content_first_phone">Skanna den här QR-koden med hjälp av din gamla enhet, för att ladda ned och installera Mi Mover.</string>
     <string name="trans_install_guide_text">Skanna för att uppdatera Mi Mover</string>
     <string name="trans_intro_title">FAQ</string>
     <string name="trans_main_activity_tutor_first">Överför objekt till en ny enhet</string>
