--- a/qcom-sdk36/Thai/main/MiMover.apk/res/values-th/strings.xml
+++ b/qcom-sdk36/Thai/main/MiMover.apk/res/values-th/strings.xml
@@ -115,6 +115,8 @@
     <string name="clearable_edittext_clear_description">ล้าง</string>
     <string name="close">ปิด</string>
     <string name="close_cellular_summary">อุปกรณ์ของคุณกำลังใช้ข้อมูลมือถือเนื่องจากข้อจำกัด ของระบบในขณะนี้ปิดข้อมูลมือถือและเชื่อมต่อกับอุปกรณ์ใหม่อีกครั้ง</string>
+    <string name="close_cellular_summary_pad">อุปกรณ์ของคุณกำลังใช้ข้อมูลมือถือเนื่องจากข้อจำกัด ของระบบในขณะนี้ปิดข้อมูลมือถือและเชื่อมต่อกับอุปกรณ์ใหม่อีกครั้ง</string>
+    <string name="close_cellular_summary_phone">อุปกรณ์ของคุณกำลังใช้ข้อมูลมือถือเนื่องจากข้อจำกัด ของระบบในขณะนี้ปิดข้อมูลมือถือและเชื่อมต่อกับอุปกรณ์ใหม่อีกครั้ง</string>
     <string name="close_cellular_title">ไม่สามารถเชื่อมต่อได้</string>
     <string name="close_twice_auth_btn">ปิดการตรวจสอบสิทธิ์สองชั้น</string>
     <string name="close_twice_auth_note">"หมายเหตุ:
@@ -301,6 +303,8 @@
     <string name="guest_connect_dialog_ensure_text">เชื่อมต่อ</string>
     <string name="guest_connect_dialog_fail_message">ไม่สามารถเชื่อมต่อได้ ลองอีกครั้ง</string>
     <string name="guest_hint_connect_new_device">เลือกอุปกรณ์ใหม่</string>
+    <string name="guest_hint_connect_new_device_pad">เลือกอุปกรณ์ใหม่</string>
+    <string name="guest_hint_connect_new_device_phone">เลือกอุปกรณ์ใหม่</string>
     <string name="guest_install_app_hint_ensure">ดาวน์โหลด</string>
     <string name="guest_install_app_hint_summary">Mi Mover เวอร์ชันใหม่ไม่สามารถใช้งานได้กับเวอร์ชันที่ติดตั้งบนอุปกรณ์นี้ โปรดดาวน์โหลดและติดตั้งเวอร์ชันใหม่</string>
     <string name="guest_install_app_hint_title">ดาวน์โหลด Mi Mover เวอร์ชันใหม่</string>
@@ -374,6 +378,8 @@
 %2$d นำอุปกรณ์ทั้งสองเข้าด้วยกัน"</string>
     <string name="install_app_new_title">สแกนรหัส QR เพื่อติดตั้งบนอุปกรณ์ใหม่</string>
     <string name="install_app_old_title">สแกนรหัส QR เพื่อติดตั้งบนอุปกรณ์เดิม</string>
+    <string name="install_app_old_title_pad">สแกนรหัส QR เพื่อติดตั้งบนอุปกรณ์เดิม</string>
+    <string name="install_app_old_title_phone">สแกนรหัส QR เพื่อติดตั้งบนอุปกรณ์เดิม</string>
     <string name="install_app_to_another_phone_content">ติดตั้ง Mi Mover บนอุปกรณ์ใหม่ของคุณ</string>
     <string name="install_app_to_another_phone_content_global">ติดตั้ง Mi Mover</string>
     <string name="install_button">ติดตั้ง</string>
@@ -512,24 +518,44 @@
     <string name="new_app_name">เวอร์ชั่นใหม่</string>
     <string name="new_main_activity_label">Mi Mover</string>
     <string name="new_trans_intro_desc_2">ไม่จำเป็นต้องป้อนรหัสผ่านใน Mi Mover เวอร์ชันใหม่ เพียงเปิด Mi Mover บนอุปกรณ์เก่าของคุณแล้วแตะ \"ฉันเป็นผู้ส่ง\" แล้วแตะชื่อฮอตสปอตเพื่อเชื่อมต่อ</string>
+    <string name="new_trans_intro_desc_2_pad">ไม่จำเป็นต้องป้อนรหัสผ่านฮอตสปอตใน Mi Mover เวอร์ชันใหม่ เพียงเปิด Mi Mover บนอุปกรณ์เครื่องเก่า แตะ \"ฉันเป็นผู้ส่ง\" แล้วแตะชื่อฮอตสปอตเพื่อเชื่อมต่อ</string>
+    <string name="new_trans_intro_desc_2_phone">ไม่จำเป็นต้องป้อนรหัสผ่านฮอตสปอตใน Mi Mover เวอร์ชันใหม่ เพียงเปิด Mi Mover บนอุปกรณ์เครื่องเก่า แตะ \"ฉันเป็นผู้ส่ง\" แล้วแตะชื่อฮอตสปอตเพื่อเชื่อมต่อ</string>
     <string name="new_trans_intro_desc_3">Mi Mover ต้องการพื้นที่เก็บข้อมูลเพื่อสร้างแพ็กเกจการถ่ายโอนบนอุปกรณ์เก่าของคุณก่อนที่จะส่งไปยังอุปกรณ์ใหม่ เพิ่มพื้นที่เก็บข้อมูลเพื่อให้สามารถดำเนินการต่อได้</string>
     <string name="new_trans_intro_desc_4">อาจมีปัญหาความเข้ากันได้ของอุปกรณ์ระบบและเวอร์ชั่นแอปที่ป้องกันไม่ให้แอปบางตัวถ่ายโอนได้สำเร็จ</string>
     <string name="new_trans_intro_desc_5">แอปบางตัว (เช่น บริการทางการเงินและเครื่องมือการชำระเงิน) ไม่อนุญาตให้โอนรหัสผ่านเนื่องจากเหตุผลด้านความปลอดภัย</string>
     <string name="new_trans_intro_desc_6">โทรศัพท์ Mi เครื่องใหม่ของคุณอาจไม่มีสิทธิ์ที่จำเป็นในการทำเช่นนั้น</string>
+    <string name="new_trans_intro_desc_6_pad">ไม่สามารถถ่ายโอนข้อมูลแอปได้เนื่องจาก Mi Mover ไม่มีสิทธิ์ที่จำเป็นบนอุปกรณ์ที่ไม่ใช่ของ Xiaomi</string>
+    <string name="new_trans_intro_desc_6_phone">ไม่สามารถถ่ายโอนข้อมูลแอปได้เนื่องจาก Mi Mover ไม่มีสิทธิ์ที่จำเป็นบนอุปกรณ์ที่ไม่ใช่ของ Xiaomi</string>
     <string name="new_trans_intro_desc_7">Mi Mover สามารถเริ่มจากที่ที่คุณออกไปได้ อย่างไรก็ตามคุณอาจต้องเริ่มต้นใหม่หากปัญหาความเข้ากันได้ของอุปกรณ์ทำให้คุณไม่สามารถดำเนินการถ่ายโอนต่อได้</string>
     <string name="new_trans_intro_desc_8">ประวัติ WeChat จากอุปกรณ์เก่าของคุณจะเขียนทับประวัติ WeChat ของอุปกรณ์ใหม่ของคุณในระหว่างการถ่ายโอน</string>
     <string name="new_trans_intro_desc_new">"%1$d ตรวจสอบให้แน่ใจว่า Mi Mover บนอุปกรณ์ใหม่ของคุณเป็นเวอร์ชันล่าสุด คุณสามารถดาวน์โหลด Mi Mover เวอร์ชันล่าสุดได้ใน Play Store หรือแตะที่นี่: %2$s
 %3$d หากฮอตสปอตยังคงไม่ปรากฏใน Mi Mover ให้เปิดการตั้งค่า Wi-Fi และตรวจสอบว่าคุณสามารถเห็นฮอตสปอตนั้นได้หรือไม่ หากเป็นเช่นนั้น ให้กลับไปที่ Mi Mover แล้วแตะชื่อฮอตสปอต"</string>
     <string name="new_trans_intro_desc_new_click">ดาวน์โหลด</string>
+    <string name="new_trans_intro_desc_new_pad">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g> ตรวจสอบให้แน่ใจว่า Mi Mover บนอุปกรณ์ใหม่ของคุณเป็นปัจจุบันแล้ว คุณสามารถดาวน์โหลด Mi Mover เวอร์ชันล่าสุดได้ใน GetApps หรือ<Data>&lt;a href=%2$s>แตะที่นี่&lt;/a></Data>"
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g> หากยังไม่เห็นฮอตสปอตใน Mi Mover ให้เปิดการตั้งค่า Wi-Fi และตรวจสอบว่าเห็นฮอตสปอตที่นั่นหรือไม่ หากเห็น ให้ย้อนกลับไปที่ Mi Mover แล้วแตะชื่อฮอตสปอต"</string>
+    <string name="new_trans_intro_desc_new_pad_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g> ตรวจสอบให้แน่ใจว่า Mi Mover บนอุปกรณ์ใหม่ของคุณเป็นปัจจุบันแล้ว คุณสามารถดาวน์โหลด Mi Mover เวอร์ชันล่าสุดได้ใน GetApps หรือ<Data>&lt;a href=%2$s>แตะที่นี่&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g> หากยังไม่เห็นฮอตสปอตใน Mi Mover ให้เปิดการตั้งค่า WLAN และตรวจสอบว่าเห็นฮอตสปอตที่นั่นหรือไม่ หากเห็น ให้ย้อนกลับไปที่ Mi Mover แล้วแตะชื่อฮอตสปอต"</string>
+    <string name="new_trans_intro_desc_new_phone">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g> ตรวจสอบให้แน่ใจว่า Mi Mover บนอุปกรณ์ใหม่ของคุณเป็นปัจจุบันแล้ว คุณสามารถดาวน์โหลด Mi Mover เวอร์ชันล่าสุดได้ใน GetApps หรือ<Data>&lt;a href=%2$s>แตะที่นี่&lt;/a></Data>"
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g> หากยังไม่เห็นฮอตสปอตใน Mi Mover ให้เปิดการตั้งค่า Wi-Fi และตรวจสอบว่าเห็นฮอตสปอตที่นั่นหรือไม่ หากเห็น ให้ย้อนกลับไปที่ Mi Mover แล้วแตะชื่อฮอตสปอต"</string>
+    <string name="new_trans_intro_desc_new_phone_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g> ตรวจสอบให้แน่ใจว่า Mi Mover บนอุปกรณ์ใหม่ของคุณเป็นปัจจุบันแล้ว คุณสามารถดาวน์โหลด Mi Mover เวอร์ชันล่าสุดได้ใน GetApps หรือ<Data>&lt;a href=%2$s>แตะที่นี่&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g> หากยังไม่เห็นฮอตสปอตใน Mi Mover ให้เปิดการตั้งค่า WLAN และตรวจสอบว่าเห็นฮอตสปอตที่นั่นหรือไม่ หากเห็น ให้ย้อนกลับไปที่ Mi Mover แล้วแตะชื่อฮอตสปอต"</string>
     <string name="new_trans_intro_desc_old">%d. หากฮอตสปอตยังคงไม่ปรากฏใน Mi Mover ให้เปิดการตั้งค่า Wi-Fi และตรวจสอบว่าคุณสามารถเห็นได้หรือไม่ ถ้าเป็นเช่นนั้นกลับไปที่ Mi Mover แล้วแตะชื่อฮอตสปอต</string>
     <string name="new_trans_intro_question_1">%d. เหตุใดฉันจึงไม่เห็นฮอตสปอตของอุปกรณ์ใหม่ในเครื่องเก่า?</string>
+    <string name="new_trans_intro_question_1_pad">%d เหตุใดฉันจึงไม่เห็นฮอตสปอตของอุปกรณ์ใหม่ในเครื่องเก่า?</string>
+    <string name="new_trans_intro_question_1_phone">%d เหตุใดฉันจึงไม่เห็นฮอตสปอตของอุปกรณ์ใหม่ในเครื่องเก่า?</string>
     <string name="new_trans_intro_question_2">%d. รหัสผ่านของฮอตสปอตคืออะไร?</string>
     <string name="new_trans_intro_question_3">%d. ทำไมมันบอกว่ามีพื้นที่เก็บข้อมูลไม่เพียงพอบนอุปกรณ์เก่า?</string>
+    <string name="new_trans_intro_question_3_pad">%d. ทำไมมันบอกว่ามีพื้นที่เก็บข้อมูลไม่เพียงพอบนอุปกรณ์เก่า?</string>
+    <string name="new_trans_intro_question_3_phone">%d. ทำไมมันบอกว่ามีพื้นที่เก็บข้อมูลไม่เพียงพอบนอุปกรณ์เก่า?</string>
     <string name="new_trans_intro_question_4">%d. เหตุใดจึงโอนแอปไม่สำเร็จทั้งหมด?</string>
     <string name="new_trans_intro_question_5">%d. เหตุใดรหัสผ่านของบัญชีแอปบุคคลที่สามบางบัญชีจึงโอนไม่สำเร็จ</string>
     <string name="new_trans_intro_question_6">%d. เหตุใดจึงไม่สามารถถ่ายโอนข้อมูลแอปจากอุปกรณ์บุคคลที่สามได้?</string>
+    <string name="new_trans_intro_question_6_pad">%d ทำไมจึงไม่สามารถถ่ายโอนข้อมูลแอปจากอุปกรณ์ที่ไม่ใช่ Xiaomi ได้</string>
+    <string name="new_trans_intro_question_6_phone">%d ทำไมจึงไม่สามารถถ่ายโอนข้อมูลแอปจากอุปกรณ์ที่ไม่ใช่ Xiaomi ได้</string>
     <string name="new_trans_intro_question_7">%d. ถ้าฉันออกจาก Mi Mover ระหว่างการโอน ครั้งต่อไปจะต้องเริ่มใหม่หรือไม่?</string>
     <string name="new_trans_intro_question_8">%d. เหตุใดประวัติ WeChat ของฉันจึงหายไปในอุปกรณ์ใหม่?</string>
+    <string name="new_trans_intro_question_8_pad">%d. เหตุใดประวัติ WeChat ของฉันจึงหายไปในอุปกรณ์ใหม่?</string>
+    <string name="new_trans_intro_question_8_phone">%d. เหตุใดประวัติ WeChat ของฉันจึงหายไปในอุปกรณ์ใหม่?</string>
     <string name="new_version_transfer_downloading">กำลังอัปเดต Mi Mover</string>
     <string name="new_version_transfer_downloading_progress">%s</string>
     <string name="new_version_transfer_upgrading">กำลังอัปเดต…</string>
@@ -712,6 +738,8 @@
     <string name="scanner_quit_alert_btn_negative">ออก</string>
     <string name="scanner_quit_alert_btn_positive">ไม่ออก</string>
     <string name="scanner_quit_alert_message">คุณจะต้องเชื่อมต่ออุปกรณ์ทั้งสองอีกครั้งหากคุณออกจาก Mi Mover ทันที เลิกแล้วใช่ไหม</string>
+    <string name="scanner_quit_alert_message_pad">คุณจะต้องเชื่อมต่ออุปกรณ์ทั้งสองอีกครั้งหากคุณออกจาก Mi Mover ทันที เลิกแล้วใช่ไหม</string>
+    <string name="scanner_quit_alert_message_phone">คุณจะต้องเชื่อมต่ออุปกรณ์ทั้งสองอีกครั้งหากคุณออกจาก Mi Mover ทันที เลิกแล้วใช่ไหม</string>
     <string name="scanner_quit_alert_title">ออกตอนนี้?</string>
     <string name="scanner_send_dialog_btn">รับทราบ</string>
     <string name="scanner_send_dialog_message">อย่าปิด Wi-Fi หรือสลับระหว่างเครือข่ายระหว่างการถ่ายโอน</string>
@@ -723,6 +751,8 @@
     <string name="scanner_wechat_overwrite_hit">เนื่องจากข้อจำกัดของแอปบุคคลที่สาม ประวัติการแชทและข้อมูลแอปอื่นๆ บนอุปกรณ์ใหม่ของคุณจะถูกแทนที่ด้วยสิ่งที่เก่าจากอุปกรณ์เก่าหลังจากการถ่ายโอนเสร็จสิ้น</string>
     <string name="search_menu_title">ค้นหา</string>
     <string name="searching_for_new_device">กำลังค้นหาอุปกรณ์ใหม่…</string>
+    <string name="searching_for_new_device_pad">กำลังค้นหาอุปกรณ์ใหม่…</string>
+    <string name="searching_for_new_device_phone">กำลังค้นหาอุปกรณ์ใหม่…</string>
     <string name="secret_package_title_file">ไฟล์</string>
     <string name="secret_package_title_gallery">อัลบั้ม</string>
     <string name="secret_package_title_note">บันทึกย่อ</string>
@@ -753,6 +783,8 @@
     <string name="select_mi_summary">Xiaomi และ Redmi</string>
     <string name="select_mi_title">Xiaomi</string>
     <string name="select_old_device_title">เลือกรุ่นอุปกรณ์เก่า</string>
+    <string name="select_old_device_title_pad">เลือกชนิดอุปกรณ์เก่า</string>
+    <string name="select_old_device_title_phone">เลือกชนิดอุปกรณ์เก่า</string>
     <string name="selected">เลือกแล้ว</string>
     <string name="send">ส่ง</string>
     <string name="send_verification_code_fail">ไม่สามารถส่งรหัสยืนยันได้</string>
@@ -842,6 +874,7 @@
     <string name="thursday">วันพฤหัสบดี</string>
     <string name="thursday_short">พฤหัส</string>
     <string name="thursday_shortest">พฤหัส</string>
+    <string name="time">ระยะเวลา</string>
     <string name="time_concentrator" />
     <string name="time_picker_dialog_title">ตั้งเวลา</string>
     <string name="time_picker_label_hour">ชม.</string>
@@ -900,6 +933,8 @@
     <string name="trans_install_guide_new_content_first">"สแกนรหัส QR นี้โดยใช้อุปกรณ์ใหม่ของคุณ
 ดาวน์โหลดและติดตั้ง Mi Mover"</string>
     <string name="trans_install_guide_old_content_first">สแกนรหัส QR นี้ด้วยอุปกรณ์เครื่องเก่าของคุณเพื่อดาวน์โหลดและติดตั้ง Mi Mover</string>
+    <string name="trans_install_guide_old_content_first_pad">สแกนรหัส QR นี้ด้วยอุปกรณ์เครื่องเก่าของคุณเพื่อดาวน์โหลดและติดตั้ง Mi Mover</string>
+    <string name="trans_install_guide_old_content_first_phone">สแกนรหัส QR นี้ด้วยอุปกรณ์เครื่องเก่าของคุณเพื่อดาวน์โหลดและติดตั้ง Mi Mover</string>
     <string name="trans_install_guide_text">สแกนเพื่ออัปเดต Mi Mover</string>
     <string name="trans_intro_title">คำถามที่พบบ่อย</string>
     <string name="trans_main_activity_tutor_first">โอนรายการไปยังอุปกรณ์ใหม่</string>
