--- a/qcom-sdk36/Thai/main/Mms.apk/res/values-th/strings.xml
+++ b/qcom-sdk36/Thai/main/Mms.apk/res/values-th/strings.xml
@@ -173,6 +173,8 @@
     <string name="button_pre_slide">ก่อนหน้า</string>
     <string name="button_resend_message">ส่งอีกครั้ง</string>
     <string name="button_unfold">เปิดออก</string>
+    <string name="calendar_date_picker_a11y_next_month">เปลี่ยนไปที่เดือนถัดไป</string>
+    <string name="calendar_date_picker_a11y_prev_month">เปลี่ยนไปที่เดือนก่อนหน้า</string>
     <string name="can_not_send_by_rcs">ไม่สามารถใช้การส่งข้อความ 5G ได้</string>
     <string name="can_not_view_group_chat_stranger">ไม่สามารถดูรายละเอียดของคนแปลกหน้า</string>
     <string name="cancel">ยกเลิก</string>
