--- a/qcom-sdk36/Turkish/main/MiMover.apk/res/values-tr/strings.xml
+++ b/qcom-sdk36/Turkish/main/MiMover.apk/res/values-tr/strings.xml
@@ -115,6 +115,8 @@
     <string name="clearable_edittext_clear_description">Temizle</string>
     <string name="close">Kapat</string>
     <string name="close_cellular_summary">Cihazınız sistem kısıtlamalarından dolayı şimdi mobil veri kullanıyor. Mobil veriyi kapatın ve yeni cihaza tekrar bağlanın.</string>
+    <string name="close_cellular_summary_pad">Cihazınız sistem kısıtlamalarından dolayı şimdi mobil veri kullanıyor. Mobil veriyi kapatın ve yeni cihaza tekrar bağlanın.</string>
+    <string name="close_cellular_summary_phone">Cihazınız sistem kısıtlamalarından dolayı şimdi mobil veri kullanıyor. Mobil veriyi kapatın ve yeni cihaza tekrar bağlanın.</string>
     <string name="close_cellular_title">Bağlanılamadı</string>
     <string name="close_twice_auth_btn">İki faktörlü kimlik doğrulamayı kapat</string>
     <string name="close_twice_auth_note">"Not:
@@ -301,6 +303,8 @@ WeChat'i açın ve Ben > Ayarlar > Genel > Yedekle &amp; sohbetleri taşı menü
     <string name="guest_connect_dialog_ensure_text">Bağlan</string>
     <string name="guest_connect_dialog_fail_message">Bağlanılamadı. Tekrar deneyin.</string>
     <string name="guest_hint_connect_new_device">Yeni cihazı seçin</string>
+    <string name="guest_hint_connect_new_device_pad">Yeni cihazı seçin</string>
+    <string name="guest_hint_connect_new_device_phone">Yeni cihazı seçin</string>
     <string name="guest_install_app_hint_ensure">İndir</string>
     <string name="guest_install_app_hint_summary">"Mi Taşıyıcı'nın yeni sürümü bu cihaza yüklenilen ile uyumlu değil. Yeni sürümü indirin ve yükleyin."</string>
     <string name="guest_install_app_hint_title">"Mi Taşıyıcı'nın yeni sürümünü indir"</string>
@@ -374,6 +378,8 @@ WeChat'i açın ve Ben > Ayarlar > Genel > Yedekle &amp; sohbetleri taşı menü
 %2$d. İki cihazı yan yana getirin."</string>
     <string name="install_app_new_title">Yeni cihaza yüklemek için QR kodunu taratın</string>
     <string name="install_app_old_title">Eski cihaza yüklemek için QR kodunu taratın</string>
+    <string name="install_app_old_title_pad">Eski cihaza yüklemek için QR kodunu taratın</string>
+    <string name="install_app_old_title_phone">Eski cihaza yüklemek için QR kodunu taratın</string>
     <string name="install_app_to_another_phone_content">"Mi Taşıyıcı'yı yeni telefonunuza yükleyin"</string>
     <string name="install_app_to_another_phone_content_global">"Mi Taşıyıcı'yı yükleyin"</string>
     <string name="install_button">Yükle</string>
@@ -512,24 +518,44 @@ WeChat'i açın ve Ben > Ayarlar > Genel > Yedekle &amp; sohbetleri taşı menü
     <string name="new_app_name">Yeni sürüm</string>
     <string name="new_main_activity_label">Mi Taşıyıcı</string>
     <string name="new_trans_intro_desc_2">"Mi Taşıyıcı'nın yeni sürümünde şifre girmeye gerek yoktur. Sadece eski cihazınızda Mi Taşıyıcı'yı açın, \"Göndericiyim\" yazısına dokunun, ve bağlanmak için kablosuz bağlantı noktasının adına dokunun."</string>
+    <string name="new_trans_intro_desc_2_pad">"Mi Taşıyıcı'nın yeni sürümünde bağlantı noktası şifresini girmeye gerek yok. Sadece eski cihazınızda Mi Taşıyıcı'yı açın, \"Göndericiyim\" yazısına dokunun, ve bağlanmak için kablosuz bağlantı noktasının adına dokunun."</string>
+    <string name="new_trans_intro_desc_2_phone">"Mi Taşıyıcı'nın yeni sürümünde bağlantı noktası şifresini girmeye gerek yok. Sadece eski cihazınızda Mi Taşıyıcı'yı açın, \"Göndericiyim\" yazısına dokunun, ve bağlanmak için kablosuz bağlantı noktasının adına dokunun."</string>
     <string name="new_trans_intro_desc_3">Yeni cihazınıza göndermeden önce Mi Taşıyıcı, eski cihazınızda aktarma paketi oluşturmak için yeterli depolama alanına ihtiyaç duyar. Devam edebilmek için depolama alanı açın.</string>
     <string name="new_trans_intro_desc_4">Başarılı bir şekilde aktarım yapılıyorken bazı uygulamaları engelleyen, cihaz, sistem ve uygulama sürümü uyumluluğu sorunları olabilir.</string>
     <string name="new_trans_intro_desc_5">Bazı uygulamalar (örn. finansal hizmetler ve ödeme araçları), güvenlik nedenlerinden dolayı şifre aktarımına izin vermiyor.</string>
     <string name="new_trans_intro_desc_6">Yeni Mi telefonunuzun bunu yapmak için gerekli izinleri olmayabilir.</string>
+    <string name="new_trans_intro_desc_6_pad">"Uygulama verileri aktarılamıyor çünkü Mi Taşıyıcı'nın Xiaomi olmayan cihazlarda gerekli izinleri bulunmuyor."</string>
+    <string name="new_trans_intro_desc_6_phone">"Uygulama verileri aktarılamıyor çünkü Mi Taşıyıcı'nın Xiaomi olmayan cihazlarda gerekli izinleri bulunmuyor."</string>
     <string name="new_trans_intro_desc_7">Mi Taşıyıcı, ayrıldığınız yerden devam edecektir. Bununla birlikte, bölünen aktarımı devam ettirmenizi engelleyen cihaz uyumluluk sorunları ise yeniden başlamak zorunda kalabilirsiniz.</string>
     <string name="new_trans_intro_desc_8">Eski cihazınızdaki Wechat geçmişi, aktarım sırasında yeni cihazınızın WeChat geçmişinin üzerine yazılacaktır.</string>
     <string name="new_trans_intro_desc_new">"%1$d.Yeni cihazınızdaki Mi Taşıyıcı'nın güncel olduğundan emin olun. Mi Taşıyıcı'nın son sürümünü Play Store'dan indirebilir veya buraya dokunabilirsiniz: %2$s.
 %3$d.Bağlantı noktası hâlâ Mi Taşıyıcı'da görünmüyorsa Wi-Fi ayarlarını açın ve orada görünüp görünmediğine bakın. Görünüyorsa Mi Taşıyıcı'ya geri gidin ve bağlantı noktasının adına dokunun."</string>
     <string name="new_trans_intro_desc_new_click">İndir</string>
+    <string name="new_trans_intro_desc_new_pad">"&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Yeni cihazınızdaki Mi Taşıyıcı'nın güncel olduğundan emin olun. Mi Taşıyıcı'nın son sürümünü GetApps'ten indirebilir veya "<Data>&lt;a href=%2$s>buraya dokunabilirsiniz&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Bağlantı noktası Mi Taşıyıcı'da hâlâ görünmüyorsa Wi-Fi ayarlarını açın ve orada görünüp görünmediğine bakın. Görünüyorsa Mi Taşıyıcı'ya geri gidin ve bağlantı noktasının adına dokunun."</string>
+    <string name="new_trans_intro_desc_new_pad_china">"&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Yeni cihazınızdaki Mi Taşıyıcı'nın güncel olduğundan emin olun. Mi Taşıyıcı'nın son sürümünü GetApps'ten indirebilir veya "<Data>&lt;a href=%2$s>buraya dokunabilirsiniz&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Bağlantı noktası Mi Taşıyıcı'da hâlâ görünmüyorsa WLAN ayarlarını açın ve orada görünüp görünmediğine bakın. Görünüyorsa Mi Taşıyıcı'ya geri gidin ve bağlantı noktasının adına dokunun."</string>
+    <string name="new_trans_intro_desc_new_phone">"&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Yeni cihazınızdaki Mi Taşıyıcı'nın güncel olduğundan emin olun. Mi Taşıyıcı'nın son sürümünü GetApps'ten indirebilir veya "<Data>&lt;a href=%2$s>buraya dokunabilirsiniz&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Bağlantı noktası Mi Taşıyıcı'da hâlâ görünmüyorsa Wi-Fi ayarlarını açın ve orada görünüp görünmediğine bakın. Görünüyorsa Mi Taşıyıcı'ya geri gidin ve bağlantı noktasının adına dokunun."</string>
+    <string name="new_trans_intro_desc_new_phone_china">"&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. Yeni cihazınızdaki Mi Taşıyıcı'nın güncel olduğundan emin olun. Mi Taşıyıcı'nın son sürümünü GetApps'ten indirebilir veya "<Data>&lt;a href=%2$s>buraya dokunabilirsiniz&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. Bağlantı noktası Mi Taşıyıcı'da hâlâ görünmüyorsa WLAN ayarlarını açın ve orada görünüp görünmediğine bakın. Görünüyorsa Mi Taşıyıcı'ya geri gidin ve bağlantı noktasının adına dokunun."</string>
     <string name="new_trans_intro_desc_old">"%d. Kablosuz bağlantı noktası, hala Mi Taşıyıcı'da görünmüyor ise, Wi-Fi ayarlarını açın ve orada görünüp görünmediğini kontrol edin. Eğer görebiliyorsanız, Mi Taşıyıcı'ya geri dönün ve kablosuz bağlantı noktasının adına dokunun."</string>
     <string name="new_trans_intro_question_1">%d. Yeni cihazın bağlantı noktasını eskisinde neden göremiyorum?</string>
+    <string name="new_trans_intro_question_1_pad">%d. Yeni cihazın bağlantı noktasını eskisinde neden göremiyorum?</string>
+    <string name="new_trans_intro_question_1_phone">%d. Yeni cihazın bağlantı noktasını eskisinde neden göremiyorum?</string>
     <string name="new_trans_intro_question_2">%d. Bağlantı noktasının şifresi nedir?</string>
     <string name="new_trans_intro_question_3">%d. Neden eski cihazınızda yeterli depolama alanı olmadığını söylüyor?</string>
+    <string name="new_trans_intro_question_3_pad">%d. Neden eski cihazınızda yeterli depolama alanı olmadığını söylüyor?</string>
+    <string name="new_trans_intro_question_3_phone">%d. Neden eski cihazınızda yeterli depolama alanı olmadığını söylüyor?</string>
     <string name="new_trans_intro_question_4">%d. Neden tüm uygulamalar başarılı bir şekilde aktarılmıyor?</string>
     <string name="new_trans_intro_question_5">%d. Neden üçüncü taraf uygulama hesaplarının şifreleri başarılı bir şekilde aktarılmıyor?</string>
     <string name="new_trans_intro_question_6">%d. Neden uygulama verileri üçüncü taraf bir cihazdan aktarılamıyor?</string>
+    <string name="new_trans_intro_question_6_pad">%d. Neden uygulama verileri Xiaomi olmayan bir cihazdan aktarılamıyor?</string>
+    <string name="new_trans_intro_question_6_phone">%d. Neden uygulama verileri Xiaomi olmayan bir cihazdan aktarılamıyor?</string>
     <string name="new_trans_intro_question_7">"%d. Bir aktarımın ortasında Mi Taşıyıcı'dan ayrılırsam, bir dahaki sefere baştan mı başlamam gerekir?"</string>
     <string name="new_trans_intro_question_8">%d. Neden yeni cihazda WeChat geçmişim kayboldu?</string>
+    <string name="new_trans_intro_question_8_pad">%d. Neden yeni cihazda WeChat geçmişim kayboldu?</string>
+    <string name="new_trans_intro_question_8_phone">%d. Neden yeni cihazda WeChat geçmişim kayboldu?</string>
     <string name="new_version_transfer_downloading">Mi Taşıyıcı güncelleniyor</string>
     <string name="new_version_transfer_downloading_progress">%s</string>
     <string name="new_version_transfer_upgrading">Güncelleniyor…</string>
@@ -712,6 +738,8 @@ En az %s yer açın."</string>
     <string name="scanner_quit_alert_btn_negative">Çık</string>
     <string name="scanner_quit_alert_btn_positive">Çıkma</string>
     <string name="scanner_quit_alert_message">"Mi Taşıyıcı'dan şimdi çıkarsanız, iki cihazı tekrar bağlamak zorunda kalacaksınız. Yine de çıkılsın mı?"</string>
+    <string name="scanner_quit_alert_message_pad">"Mi Taşıyıcı'dan şimdi çıkarsanız iki cihazı tekrar bağlamak zorunda kalacaksınız. Yine de çıkılsın mı?"</string>
+    <string name="scanner_quit_alert_message_phone">"Mi Taşıyıcı'dan şimdi çıkarsanız iki cihazı tekrar bağlamak zorunda kalacaksınız. Yine de çıkılsın mı?"</string>
     <string name="scanner_quit_alert_title">Şimdi çıkılsın mı?</string>
     <string name="scanner_send_dialog_btn">Anladım</string>
     <string name="scanner_send_dialog_message">"Aktarım sırasında Wi-Fi'yi kapatmayın veya ağlar arasında geçiş yapmayın."</string>
@@ -723,6 +751,8 @@ En az %s yer açın."</string>
     <string name="scanner_wechat_overwrite_hit">Üçüncü taraf uygulamarın kısıtlamalarından dolayı, yeni cihazınızdaki sohbet geçmişleri ve diğer uygulama verileri aktarım tamamlandıktan sonra eski cihazınızdakiyle değiştirilecektir.</string>
     <string name="search_menu_title">Ara</string>
     <string name="searching_for_new_device">Yeni cihaz aranıyor…</string>
+    <string name="searching_for_new_device_pad">Yeni cihaz aranıyor…</string>
+    <string name="searching_for_new_device_phone">Yeni cihaz aranıyor…</string>
     <string name="secret_package_title_file">Dosyalar</string>
     <string name="secret_package_title_gallery">Albümler</string>
     <string name="secret_package_title_note">Notlar</string>
@@ -753,6 +783,8 @@ En az %s yer açın."</string>
     <string name="select_mi_summary">Xiaomi ve Redmi</string>
     <string name="select_mi_title">Xiaomi</string>
     <string name="select_old_device_title">Eski cihaz modelini seçin</string>
+    <string name="select_old_device_title_pad">Eski cihaz türünü seçin</string>
+    <string name="select_old_device_title_phone">Eski cihaz türünü seçin</string>
     <string name="selected">Seçildi</string>
     <string name="send">Gönder</string>
     <string name="send_verification_code_fail">Doğrulama kodu gönderilemedi</string>
@@ -842,6 +874,7 @@ En az %s yer açın."</string>
     <string name="thursday">Perşembe</string>
     <string name="thursday_short">Prş</string>
     <string name="thursday_shortest">Prş</string>
+    <string name="time">Zaman dilimi</string>
     <string name="time_concentrator" />
     <string name="time_picker_dialog_title">Zamanı ayarla</string>
     <string name="time_picker_label_hour">S</string>
@@ -900,6 +933,8 @@ En az %s yer açın."</string>
     <string name="trans_install_guide_new_content_first">"Yeni cihazınızla bu QR kodunu tarayın.
 Mi Taşıyıcı'yı indirin ve yükleyin."</string>
     <string name="trans_install_guide_old_content_first">Bu QR kodunu, Mi Taşıyıcıyı indirip kurmak için eski cihazınızla taratın.</string>
+    <string name="trans_install_guide_old_content_first_pad">Bu QR kodunu, Mi Taşıyıcıyı indirip kurmak için eski cihazınızla taratın.</string>
+    <string name="trans_install_guide_old_content_first_phone">Bu QR kodunu, Mi Taşıyıcıyı indirip kurmak için eski cihazınızla taratın.</string>
     <string name="trans_install_guide_text">"Mi Taşıyıcı'yı güncellemek için tarayın"</string>
     <string name="trans_intro_title">SSS</string>
     <string name="trans_main_activity_tutor_first">Ögeleri yeni bir cihaza aktar</string>
