--- a/qcom-sdk36/Ukrainian/main/Mms.apk/res/values-uk/strings.xml
+++ b/qcom-sdk36/Ukrainian/main/Mms.apk/res/values-uk/strings.xml
@@ -173,6 +173,8 @@
     <string name="button_pre_slide">Назад</string>
     <string name="button_resend_message">Відправити ще раз</string>
     <string name="button_unfold">Розгорнути</string>
+    <string name="calendar_date_picker_a11y_next_month">Перейти до наступного місяця</string>
+    <string name="calendar_date_picker_a11y_prev_month">Перейти до попереднього місяця</string>
     <string name="can_not_send_by_rcs">Помилка використання Повідомлень 5G</string>
     <string name="can_not_view_group_chat_stranger">Не можна переглянути відомості про незнайомців.</string>
     <string name="cancel">Скасувати</string>
