--- a/qcom-sdk36/Azerbaijani/main/Mms.apk/res/values-az/strings.xml
+++ b/qcom-sdk36/Azerbaijani/main/Mms.apk/res/values-az/strings.xml
@@ -32,6 +32,8 @@
     <string name="bottomsheet_action_expand_halfway">Tam genişləndirin</string>
     <string name="bottomsheet_drag_handle_clicked">Dəstəyə iki dəfə toxunun</string>
     <string name="bottomsheet_drag_handle_content_description">Dəstək</string>
+    <string name="calendar_date_picker_a11y_next_month">Növbəti aya dəyişin</string>
+    <string name="calendar_date_picker_a11y_prev_month">Əvvəlki aya dəyişin</string>
     <string name="character_counter_content_description">%1$d/%2$d simvol daxil edilib</string>
     <string name="character_counter_overflowed_content_description">Simvol limiti %1$d/%2$d dəyərini keçdi</string>
     <string name="clear_text_end_icon_content_description">Mətni silin</string>
