--- a/qcom-sdk36/Danish/main/Mms.apk/res/values-da/strings.xml
+++ b/qcom-sdk36/Danish/main/Mms.apk/res/values-da/strings.xml
@@ -173,6 +173,8 @@ Prøv igen."</string>
     <string name="button_pre_slide">Forrige</string>
     <string name="button_resend_message">Send again</string>
     <string name="button_unfold">Fold ud</string>
+    <string name="calendar_date_picker_a11y_next_month">Skift til næste måned</string>
+    <string name="calendar_date_picker_a11y_prev_month">Skift til forrige måned</string>
     <string name="can_not_send_by_rcs">"Can't use 5G Messaging"</string>
     <string name="can_not_view_group_chat_stranger">Kan ikke se oplysninger om fremmede.</string>
     <string name="cancel">Annuller</string>
