--- a/qcom-sdk36/Hebrew/main/Mms.apk/res/values-iw/strings.xml
+++ b/qcom-sdk36/Hebrew/main/Mms.apk/res/values-iw/strings.xml
@@ -32,6 +32,8 @@
     <string name="bottomsheet_action_expand_halfway">הרחבה עד האמצע</string>
     <string name="bottomsheet_drag_handle_clicked">בוצעה הקשה כפולה על נקודת האחיזה לגרירה</string>
     <string name="bottomsheet_drag_handle_content_description">נקודת אחיזה לגרירה</string>
+    <string name="calendar_date_picker_a11y_next_month">מעבר לחודש הבא</string>
+    <string name="calendar_date_picker_a11y_prev_month">מעבר לחודש הקודם</string>
     <string name="character_counter_content_description">הוזנו %1$d תווים מתוך %2$d</string>
     <string name="character_counter_overflowed_content_description">מגבלת התווים חורגת ב-%1$d מתוך %2$d</string>
     <string name="clear_text_end_icon_content_description">מחיקת הטקסט</string>
