--- a/qcom-sdk36/Korean/main/Mms.apk/res/values-ko/strings.xml
+++ b/qcom-sdk36/Korean/main/Mms.apk/res/values-ko/strings.xml
@@ -173,6 +173,8 @@
     <string name="button_pre_slide">이전</string>
     <string name="button_resend_message">Send again</string>
     <string name="button_unfold">접기 해제</string>
+    <string name="calendar_date_picker_a11y_next_month">다음 달로 변경</string>
+    <string name="calendar_date_picker_a11y_prev_month">이전 달로 변경</string>
     <string name="can_not_send_by_rcs">5G 메시지 사용 실패</string>
     <string name="can_not_view_group_chat_stranger">낯선 사람의 세부사항을 확인할 수 없습니다.</string>
     <string name="cancel">취소</string>
