--- a/qcom-sdk36/Persian/main/MiMover.apk/res/values-fa-rIR/strings.xml
+++ b/qcom-sdk36/Persian/main/MiMover.apk/res/values-fa-rIR/strings.xml
@@ -81,6 +81,8 @@
     <string name="clearable_edittext_clear_description">پاک‌سازی</string>
     <string name="close">بستن</string>
     <string name="close_cellular_summary">دستگاه شما به دلیل محدودیت‌های سیستم درحال استفاده از اینترنت همراه است. اینترنت همراه را خاموش کرده و دوباره به دستگاه متصل شوید.</string>
+    <string name="close_cellular_summary_pad">دستگاه شما به دلیل محدودیت‌های سیستم درحال استفاده از اینترنت همراه است. اینترنت همراه را خاموش کرده و دوباره به دستگاه متصل شوید.</string>
+    <string name="close_cellular_summary_phone">دستگاه شما به دلیل محدودیت‌های سیستم درحال استفاده از اینترنت همراه است. اینترنت همراه را خاموش کرده و دوباره به دستگاه متصل شوید.</string>
     <string name="close_cellular_title">وصل نشد</string>
     <string name="close_twice_auth_btn">خاموش کردن مجوز دو مرحله‌ای</string>
     <string name="close_twice_auth_note">"توجه:
@@ -264,6 +266,8 @@
     <string name="guest_connect_dialog_ensure_text">اتصال</string>
     <string name="guest_connect_dialog_fail_message">وصل نشد. دوباره تلاش کنید.</string>
     <string name="guest_hint_connect_new_device">انتخاب دستگاه جدید</string>
+    <string name="guest_hint_connect_new_device_pad">انتخاب دستگاه جدید</string>
+    <string name="guest_hint_connect_new_device_phone">انتخاب دستگاه جدید</string>
     <string name="guest_install_app_hint_ensure">دانلود</string>
     <string name="guest_install_app_hint_summary">نسخه جدید جابجاگر Mi با نسخه‌ای که روی این دستگاه نصب است سازگار نیست. نسخه جدید را دانلود و نصب کنید.</string>
     <string name="guest_install_app_hint_title">نسخه جدید جابجاگر Mi را دانلود کنید</string>
@@ -337,6 +341,8 @@
 %2$d. هر دو دستگاه را نزدیک هم کنید."</string>
     <string name="install_app_new_title">برای نصب جابجاگر Mi روی دستگاه جدید کد QR را اسکن کنید</string>
     <string name="install_app_old_title">برای نصب جابجاگر Mi روی دستگاه قدیمی کد QR را اسکن کنید</string>
+    <string name="install_app_old_title_pad">برای نصب جابجاگر Mi روی دستگاه قدیمی کد QR را اسکن کنید</string>
+    <string name="install_app_old_title_phone">برای نصب جابجاگر Mi روی دستگاه قدیمی کد QR را اسکن کنید</string>
     <string name="install_app_to_another_phone_content">جابجاگر Mi را روی دستگاه جدید خود نصب کنید</string>
     <string name="install_app_to_another_phone_content_global">نصب جابجاگر Mi</string>
     <string name="install_button">نصب</string>
@@ -475,24 +481,44 @@
     <string name="new_app_name">نسخه جدید</string>
     <string name="new_main_activity_label">جابجاگر Mi</string>
     <string name="new_trans_intro_desc_2">در نسخه جدید جابجاگر Mi نیازی به وارد کردن گذرواژه نیست. فقط کافیست جابجاگر Mi را در دستگاه قدیمی خود باز کرده، روی «من یک فرستنده‌ام» زده و روی نام کانون داغ زده تا وصل شود.</string>
+    <string name="new_trans_intro_desc_2_pad">در نسخه جدید جابجاگر Mi نیازی به وارد کردن گذرواژه کانون داغ نیست. فقط کافیست جابجاگر Mi را در دستگاه قدیمی خود باز کرده، روی «من یک فرستنده‌ام» زده و روی نام کانون داغ زده تا وصل شود.</string>
+    <string name="new_trans_intro_desc_2_phone">در نسخه جدید جابجاگر Mi نیازی به وارد کردن گذرواژه کانون داغ نیست. فقط کافیست جابجاگر Mi را در دستگاه قدیمی خود باز کرده، روی «من یک فرستنده‌ام» زده و روی نام کانون داغ زده تا وصل شود.</string>
     <string name="new_trans_intro_desc_3">جابجاگر Mi پیش از ارسال بسته انتقال به دستگاه جدید برای ایجاد آن در دستگاه قدیمی نیاز به فضای حافظه دارد. برای ادامه فضای حافظه را آزاد کنید.</string>
     <string name="new_trans_intro_desc_4">ممکن است اشکالات ناسازگاری دستگاه، سیستم و نسخه برنامه که از انتقال موفقیت‌آمیز برخی برنامه‌ها جلوگیری می‌کند وجود داشته باشد.</string>
     <string name="new_trans_intro_desc_5">برخی برنامه‌ها (مانند خدمات مالی و ابزارهای پرداختی) به دلایل امنیتی اجازه انتقال گذرواژه‌ها را نمی‌دهند.</string>
     <string name="new_trans_intro_desc_6">ممکن است گوشی جدید Mi شما مجوزهای لازم را برای انجام آن نداشته باشد.</string>
+    <string name="new_trans_intro_desc_6_pad">داده‌های برنامه قابل انتقال نیستند زیرا جابجاگر Mi مجوزهای لازم را در دستگاه‌های غیر Xiaomi ندارد.</string>
+    <string name="new_trans_intro_desc_6_phone">داده‌های برنامه قابل انتقال نیستند زیرا جابجاگر Mi مجوزهای لازم را در دستگاه‌های غیر Xiaomi ندارد.</string>
     <string name="new_trans_intro_desc_7">جابجاگر Mi می‌تواند از هر جایی که ترک کرده‌اید ادامه دهد. با این وجود، در صورتی که اشکالات سازگاری سبب جلوگیری از ادامه انتقال قطع شده شود ممکن است لازم شود از ابتدا آغاز کنید.</string>
     <string name="new_trans_intro_desc_8">هنگام انتقال تاریخچه WeChat از دستگاه قدیمی روی تاریخچه WeChat دستگاه جدید بازنویسی خواهد شد.</string>
     <string name="new_trans_intro_desc_new">"%1$d. مطمئن شوید که «جابجاگر Mi» در دستگاه شما به‌روز است. می‌توانید آخرین نسخۀ جابجاگر Mi را در فروشگاه Play دانلود کنید یا اینجا ضربه بزنید: %2$s. 
 %3$d اگر کانون داغ هنوز در «جابجاگر Mi» دیده نمی‌شود، تنظیمات Wi-Fi را باز کنید و ببینید که می‌توانید کانون داغ را آنجا ببینید یا خیر. اگر توانستید آن را ببینید، به «جابجاگر Mi» برگردید و روی نام کانون داغ ضربه بزنید."</string>
     <string name="new_trans_intro_desc_new_click">دانلود</string>
+    <string name="new_trans_intro_desc_new_pad">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. مطمئن شوید که جابجاگر Mi در دستگاه شما به‌روز است. می‌توانید آخرین نسخۀ جابجاگر Mi را در GetApps دانلود کنید یا <Data>&lt;a href=%2$s>اینجا ضربه بزنید&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. اگر کانون داغ هنوز در جابجاگر Mi دیده نمی‌شود، تنظیمات Wi-Fiرا باز کنید و ببینید که می‌توانید کانون داغ را آنجا ببینید یا خیر. اگر توانستید آن را ببینید، به جابجاگر Mi برگردید و روی نام کانون داغ ضربه بزنید."</string>
+    <string name="new_trans_intro_desc_new_pad_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. مطمئن شوید که جابجاگر Mi در دستگاه شما به‌روز است. می‌توانید آخرین نسخۀ جابجاگر Mi را در GetApps دانلود کنید یا <Data>&lt;a href=%2$s>اینجا ضربه بزنید&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. اگر کانون داغ هنوز در جابجاگر Mi دیده نمی‌شود، تنظیمات WLAN را باز کنید و ببینید که می‌توانید کانون داغ را آنجا ببینید یا خیر. اگر توانستید آن را ببینید، به جابجاگر Mi برگردید و روی نام کانون داغ ضربه بزنید."</string>
+    <string name="new_trans_intro_desc_new_phone">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. مطمئن شوید که جابجاگر Mi در دستگاه جدید شما به‌روز است. می‌توانید آخرین نسخۀ جابجاگر Mi را در GetApps دانلود کنید یا <Data>&lt;a href=%2$s>اینجا ضربه بزنید&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. اگر کانون داغ هنوز در جابجاگر Mi دیده نمی‌شود، تنظیمات Wi-Fi را باز کنید و ببینید که می‌توانید کانون داغ را آنجا ببینید یا خیر. اگر توانستید آن را ببینید، به جابجاگر Mi برگردید و روی نام کانون داغ ضربه بزنید."</string>
+    <string name="new_trans_intro_desc_new_phone_china">&lt;xliff:g id=count refersto=1>%1$d&lt;/xliff:g>. مطمئن شوید که جابجاگر Mi در دستگاه شما به‌روز است. می‌توانید آخرین نسخۀ جابجاگر Mi را در GetApps دانلود کنید یا <Data>&lt;a href=%2$s>اینجا ضربه بزنید&lt;/a></Data>".
+&lt;xliff:g id=count refersto=2>%3$d&lt;/xliff:g>. اگر کانون داغ هنوز در جابجاگر Mi دیده نمی‌شود، تنظیمات WLAN را باز کنید و ببینید که می‌توانید کانون داغ را آنجا ببینید یا خیر. اگر توانستید آن را ببینید، به جابجاگر Mi برگردید و روی نام کانون داغ ضربه بزنید."</string>
     <string name="new_trans_intro_desc_old">%d. در صورتی که کانون داغ همچنان در جابجاگر Mi نمایان نشد، تنظیمات Wi-Fi را باز کرده و بررسی کنید که آیا در آنجا دیده می‌شود یا خیر. اگر چنین است به جابجاگر Mi و روی نام کانون داغ بزنید.</string>
     <string name="new_trans_intro_question_1">%d. چرا نمی‌توانم کانون داغ دستگاه جدید را در دستگاه قدیمی ببینم؟</string>
+    <string name="new_trans_intro_question_1_pad">%d. چرا نمی‌توانم کانون داغ دستگاه جدید را در دستگاه قدیمی ببینم؟</string>
+    <string name="new_trans_intro_question_1_phone">%d. چرا نمی‌توانم کانون داغ دستگاه جدید را در دستگاه قدیمی ببینم؟</string>
     <string name="new_trans_intro_question_2">%d. گذرواژه کانون داغ چیست؟</string>
     <string name="new_trans_intro_question_3">%d. چرا دستگاه می‌گوید که حافظه کافی در دستگاه قدیمی موجود نیست؟</string>
+    <string name="new_trans_intro_question_3_pad">%d. چرا دستگاه می‌گوید که حافظه کافی در دستگاه قدیمی موجود نیست؟</string>
+    <string name="new_trans_intro_question_3_phone">%d. چرا دستگاه می‌گوید که حافظه کافی در دستگاه قدیمی موجود نیست؟</string>
     <string name="new_trans_intro_question_4">%d. چرا همه برنامه‌ها با موفقیت جابجا نشدند؟</string>
     <string name="new_trans_intro_question_5">%d. چرا گذرواژه حساب‌های برخی برنامه‌های سوم شخص با موفقیت جابجا نشدند؟</string>
     <string name="new_trans_intro_question_6">%d. چرا داده‌های برنامه‌ها نمی‌توانند از یک دستگاه سوم‌شخص جابجا شوند؟</string>
+    <string name="new_trans_intro_question_6_pad">%d. چرا داده‌های برنامه‌ها نمی‌توانند از یک دستگاه غیر Xiaomi جابجا شوند؟</string>
+    <string name="new_trans_intro_question_6_phone">%d. چرا داده‌های برنامه‌ها نمی‌توانند از یک دستگاه غیر Xiaomi جابجا شوند؟</string>
     <string name="new_trans_intro_question_7">%d. اگر جابجاگر Mi را در وسط یک جابجایی ترک کنم، آیا باید بار بعدی از ابتدا آغاز کنم؟</string>
     <string name="new_trans_intro_question_8">%d. چرا تاریخچه WeChat من در دستگاه جدید ناپدید شد؟</string>
+    <string name="new_trans_intro_question_8_pad">%d. چرا تاریخچه WeChat من در دستگاه جدید ناپدید شد؟</string>
+    <string name="new_trans_intro_question_8_phone">%d. چرا تاریخچه WeChat من در دستگاه جدید ناپدید شد؟</string>
     <string name="new_version_transfer_downloading">درحال به‌روزرسانی جابجاگر Mi</string>
     <string name="new_version_transfer_downloading_progress">%s</string>
     <string name="new_version_transfer_upgrading">در حال به‌روزرسانی…</string>
@@ -673,6 +699,8 @@
     <string name="scanner_quit_alert_btn_negative">خروج</string>
     <string name="scanner_quit_alert_btn_positive">خارج نشود</string>
     <string name="scanner_quit_alert_message">در صورت خارج شدن از جابجاگر Mi لازم است تا دو دستگاه را دوباره به هم وصل کنید. در هر صورت خارج شود؟</string>
+    <string name="scanner_quit_alert_message_pad">در صورت خارج شدن از جابجاگر Mi لازم است تا دو دستگاه را دوباره به هم وصل کنید. در هر صورت خارج شود؟</string>
+    <string name="scanner_quit_alert_message_phone">در صورت خارج شدن از جابجاگر Mi لازم است تا دو دستگاه را دوباره به هم وصل کنید. در هر صورت خارج شود؟</string>
     <string name="scanner_quit_alert_title">خارج می‌شوید؟</string>
     <string name="scanner_send_dialog_btn">متوجه‌ام</string>
     <string name="scanner_send_dialog_message">هنگام جابجایی Wi-Fi را خاموش نکرده و یا شبکه را تعویض نکنید.</string>
@@ -683,6 +711,8 @@
     <string name="scanner_title_tip">موارد را برای جابجایی انتخاب کنید</string>
     <string name="scanner_wechat_overwrite_hit">به دلیل محدودیت‌های برنامه سوم شخص، تاریخچه گپ و سایر داده‌های برنامه در دستگاه جدید شما پس از تکمیل انتقال با موارد دستگاه جدید جایگزین خواهند شد.</string>
     <string name="searching_for_new_device">درحال جستجوی دستگاه جدید…</string>
+    <string name="searching_for_new_device_pad">درحال جستجوی دستگاه جدید…</string>
+    <string name="searching_for_new_device_phone">درحال جستجوی دستگاه جدید…</string>
     <string name="secret_package_title_file">فایل‌ها</string>
     <string name="secret_package_title_gallery">آلبوم‌ها</string>
     <string name="secret_package_title_note">یادداشت‌ها</string>
@@ -713,6 +743,8 @@
     <string name="select_mi_summary">Xiaomi و Redmi</string>
     <string name="select_mi_title">Xiaomi</string>
     <string name="select_old_device_title">انتخاب مدل دستگاه قدیمی</string>
+    <string name="select_old_device_title_pad">انتخاب نوع دستگاه قدیمی</string>
+    <string name="select_old_device_title_phone">انتخاب نوع دستگاه قدیمی</string>
     <string name="selected">انتخاب شده</string>
     <string name="send">ارسال</string>
     <string name="send_verification_code_fail">کد تأیید ارسال نشد</string>
@@ -800,6 +832,7 @@
     <string name="thursday">پنج‌شنبه</string>
     <string name="thursday_short">پنج‌شنبه</string>
     <string name="thursday_shortest">پنج‌شنبه</string>
+    <string name="time">دوره زمانی</string>
     <string name="time_concentrator" />
     <string name="time_picker_dialog_title">تنظیم زمان</string>
     <string name="time_picker_label_hour">ساعت</string>
@@ -858,6 +891,8 @@
     <string name="trans_install_guide_new_content_first">"این کد QR را با استفاده از دستگاه جدید خود اسکن کنید.
  جابجاگر Mi را دانلود و نصب کنید."</string>
     <string name="trans_install_guide_old_content_first">این کد QR را با دستگاه قدیمی خود اسکن کرده تا جابجاگر Mi را دانلود و نصب کنید.</string>
+    <string name="trans_install_guide_old_content_first_pad">این کد QR را با دستگاه قدیمی خود اسکن کرده تا جابجاگر Mi را دانلود و نصب کنید.</string>
+    <string name="trans_install_guide_old_content_first_phone">این کد QR را با دستگاه قدیمی خود اسکن کرده تا جابجاگر Mi را دانلود و نصب کنید.</string>
     <string name="trans_install_guide_text">برای به‌روزرسانی جابجاگر Mi اسکن کنید</string>
     <string name="trans_intro_title">پرسش‌های متداول</string>
     <string name="trans_main_activity_tutor_first">انتقال موارد به دستگاه جدید</string>
