--- a/qcom-sdk36/Persian/main/Mms.apk/res/values-fa/strings.xml
+++ b/qcom-sdk36/Persian/main/Mms.apk/res/values-fa/strings.xml
@@ -32,6 +32,8 @@
     <string name="bottomsheet_action_expand_halfway">گسترده کردن تا نیمه</string>
     <string name="bottomsheet_drag_handle_clicked">روی دستگیره کشاندن دوضربه زده شد</string>
     <string name="bottomsheet_drag_handle_content_description">دستگیره کشاندن</string>
+    <string name="calendar_date_picker_a11y_next_month">تغییر به ماه بعدی</string>
+    <string name="calendar_date_picker_a11y_prev_month">تغییر به ماه قبلی</string>
     <string name="character_counter_content_description">نویسه‌های واردشده %1$d از %2$d</string>
     <string name="character_counter_overflowed_content_description">محدودیت نویسه از حد مجاز %1$d از %2$d بیشتر شده است</string>
     <string name="clear_text_end_icon_content_description">پاک کردن نوشتار</string>
