--- a/qcom-sdk36/Vietnamese/main/Mms.apk/res/values-vi/strings.xml
+++ b/qcom-sdk36/Vietnamese/main/Mms.apk/res/values-vi/strings.xml
@@ -173,6 +173,8 @@ Thử lại."</string>
     <string name="button_pre_slide">Trước</string>
     <string name="button_resend_message">Gửi lại</string>
     <string name="button_unfold">Mở rộng</string>
+    <string name="calendar_date_picker_a11y_next_month">Chuyển sang tháng tiếp theo</string>
+    <string name="calendar_date_picker_a11y_prev_month">Chuyển về tháng trước</string>
     <string name="can_not_send_by_rcs">Không thể sử dụng Tin nhắn 5G</string>
     <string name="can_not_view_group_chat_stranger">Không thể xem thông tin chi tiết của người lạ.</string>
     <string name="cancel">Hủy</string>
